fix(foot): use # for comments and strip # prefix from color values

--- a/extras/foot/themes/dark/oasis_desert_dark.ini
+++ b/extras/foot/themes/dark/oasis_desert_dark.ini
@@ -1,37 +1,37 @@
-; extras/foot/oasis_desert_dark.ini
-; name: Oasis Desert Dark
-; author: uhs-robert
+# extras/foot/oasis_desert_dark.ini
+# name: Oasis Desert Dark
+# author: uhs-robert
 
 [colors]
-cursor=#262626 #F0E68C
-foreground=#F7EDE1
-background=#262626
+cursor=262626 F0E68C
+foreground=F7EDE1
+background=262626
 
-selection-foreground=#F7EDE1
-selection-background=#433F38
+selection-foreground=F7EDE1
+selection-background=433F38
 
-search-box-no-match=#262626 #345A2B
-search-box-match=#262626 #70D255
+search-box-no-match=262626 345A2B
+search-box-match=262626 70D255
 
-urls=#87CEEB
-jump-labels=#262626 #70D255
+urls=87CEEB
+jump-labels=262626 70D255
 
-regular0=#262626
-regular1=#FF7979
-regular2=#53D390
-regular3=#F0E68C
-regular4=#81C0FF
-regular5=#C695FF
-regular6=#68C0B6
-regular7=#DDDBD5
+regular0=262626
+regular1=FF7979
+regular2=53D390
+regular3=F0E68C
+regular4=81C0FF
+regular5=C695FF
+regular6=68C0B6
+regular7=DDDBD5
 
-bright0=#77725F
-bright1=#FFA0A0
-bright2=#96EA7F
-bright3=#F8B471
-bright4=#87CEEB
-bright5=#D2ADFF
-bright6=#8FD1C7
-bright7=#FFF9F2
-16=#FF9633
-17=#F58B8B
+bright0=77725F
+bright1=FFA0A0
+bright2=96EA7F
+bright3=F8B471
+bright4=87CEEB
+bright5=D2ADFF
+bright6=8FD1C7
+bright7=FFF9F2
+16=FF9633
+17=F58B8B
