--- a/extras/foot/themes/dark/oasis_dune_dark.ini
+++ b/extras/foot/themes/dark/oasis_dune_dark.ini
@@ -1,37 +1,37 @@
-; extras/foot/oasis_dune_dark.ini
-; name: Oasis Dune Dark
-; author: uhs-robert
+# extras/foot/oasis_dune_dark.ini
+# name: Oasis Dune Dark
+# author: uhs-robert
 
 [colors]
-cursor=#2E2620 #F0E68C
-foreground=#E8E5DA
-background=#2E2620
+cursor=2E2620 F0E68C
+foreground=E8E5DA
+background=2E2620
 
-selection-foreground=#E8E5DA
-selection-background=#534A3F
+selection-foreground=E8E5DA
+selection-background=534A3F
 
-search-box-no-match=#2E2620 #345A2B
-search-box-match=#2E2620 #96EA7F
+search-box-no-match=2E2620 345A2B
+search-box-match=2E2620 96EA7F
 
-urls=#87CEEB
-jump-labels=#2E2620 #96EA7F
+urls=87CEEB
+jump-labels=2E2620 96EA7F
 
-regular0=#2E2620
-regular1=#FF7979
-regular2=#53D390
-regular3=#F0E68C
-regular4=#81C0FF
-regular5=#C695FF
-regular6=#68C0B6
-regular7=#DDDBD5
+regular0=2E2620
+regular1=FF7979
+regular2=53D390
+regular3=F0E68C
+regular4=81C0FF
+regular5=C695FF
+regular6=68C0B6
+regular7=DDDBD5
 
-bright0=#826D5A
-bright1=#FFA0A0
-bright2=#96EA7F
-bright3=#F8B471
-bright4=#87CEEB
-bright5=#D2ADFF
-bright6=#8FD1C7
-bright7=#FFF9F2
-16=#FFA34D
-17=#F29B9B
+bright0=826D5A
+bright1=FFA0A0
+bright2=96EA7F
+bright3=F8B471
+bright4=87CEEB
+bright5=D2ADFF
+bright6=8FD1C7
+bright7=FFF9F2
+16=FFA34D
+17=F29B9B
