--- a/extras/foot/themes/dark/oasis_lagoon_dark.ini
+++ b/extras/foot/themes/dark/oasis_lagoon_dark.ini
@@ -1,37 +1,37 @@
-; extras/foot/oasis_lagoon_dark.ini
-; name: Oasis Lagoon Dark
-; author: uhs-robert
+# extras/foot/oasis_lagoon_dark.ini
+# name: Oasis Lagoon Dark
+# author: uhs-robert
 
 [colors]
-cursor=#101825 #F0E68C
-foreground=#D9E6FA
-background=#101825
+cursor=101825 F0E68C
+foreground=D9E6FA
+background=101825
 
-selection-foreground=#D9E6FA
-selection-background=#22385C
+selection-foreground=D9E6FA
+selection-background=22385C
 
-search-box-no-match=#D9E6FA #5A3824
-search-box-match=#101825 #F9A05E
+search-box-no-match=D9E6FA 5A3824
+search-box-match=101825 F9A05E
 
-urls=#87CEEB
-jump-labels=#101825 #F9A05E
+urls=87CEEB
+jump-labels=101825 F9A05E
 
-regular0=#101825
-regular1=#FF7979
-regular2=#53D390
-regular3=#F0E68C
-regular4=#81C0FF
-regular5=#C695FF
-regular6=#68C0B6
-regular7=#DDDBD5
+regular0=101825
+regular1=FF7979
+regular2=53D390
+regular3=F0E68C
+regular4=81C0FF
+regular5=C695FF
+regular6=68C0B6
+regular7=DDDBD5
 
-bright0=#3B6A87
-bright1=#FFA0A0
-bright2=#96EA7F
-bright3=#F8B471
-bright4=#87CEEB
-bright5=#D2ADFF
-bright6=#8FD1C7
-bright7=#FFF9F2
-16=#FF9633
-17=#F78181
+bright0=3B6A87
+bright1=FFA0A0
+bright2=96EA7F
+bright3=F8B471
+bright4=87CEEB
+bright5=D2ADFF
+bright6=8FD1C7
+bright7=FFF9F2
+16=FF9633
+17=F78181
