--- a/extras/foot/themes/dark/oasis_mirage_dark.ini
+++ b/extras/foot/themes/dark/oasis_mirage_dark.ini
@@ -1,37 +1,37 @@
-; extras/foot/oasis_mirage_dark.ini
-; name: Oasis Mirage Dark
-; author: uhs-robert
+# extras/foot/oasis_mirage_dark.ini
+# name: Oasis Mirage Dark
+# author: uhs-robert
 
 [colors]
-cursor=#18252A #F0E68C
-foreground=#DDEFEF
-background=#18252A
+cursor=18252A F0E68C
+foreground=DDEFEF
+background=18252A
 
-selection-foreground=#DDEFEF
-selection-background=#2A3F46
+selection-foreground=DDEFEF
+selection-background=2A3F46
 
-search-box-no-match=#18252A #5A3824
-search-box-match=#18252A #F9A05E
+search-box-no-match=18252A 5A3824
+search-box-match=18252A F9A05E
 
-urls=#87CEEB
-jump-labels=#18252A #F9A05E
+urls=87CEEB
+jump-labels=18252A F9A05E
 
-regular0=#18252A
-regular1=#FF7979
-regular2=#53D390
-regular3=#F0E68C
-regular4=#81C0FF
-regular5=#C695FF
-regular6=#68C0B6
-regular7=#DDDBD5
+regular0=18252A
+regular1=FF7979
+regular2=53D390
+regular3=F0E68C
+regular4=81C0FF
+regular5=C695FF
+regular6=68C0B6
+regular7=DDDBD5
 
-bright0=#587270
-bright1=#FFA0A0
-bright2=#96EA7F
-bright3=#F8B471
-bright4=#87CEEB
-bright5=#D2ADFF
-bright6=#8FD1C7
-bright7=#FFF9F2
-16=#FF9633
-17=#F39493
+bright0=587270
+bright1=FFA0A0
+bright2=96EA7F
+bright3=F8B471
+bright4=87CEEB
+bright5=D2ADFF
+bright6=8FD1C7
+bright7=FFF9F2
+16=FF9633
+17=F39493
