--- a/extras/foot/themes/dark/oasis_night_dark.ini
+++ b/extras/foot/themes/dark/oasis_night_dark.ini
@@ -1,37 +1,37 @@
-; extras/foot/oasis_night_dark.ini
-; name: Oasis Night Dark
-; author: uhs-robert
+# extras/foot/oasis_night_dark.ini
+# name: Oasis Night Dark
+# author: uhs-robert
 
 [colors]
-cursor=#0D0D1A #F0E68C
-foreground=#F7F4E9
-background=#0D0D1A
+cursor=0D0D1A F0E68C
+foreground=F7F4E9
+background=0D0D1A
 
-selection-foreground=#F7F4E9
-selection-background=#3E2F4A
+selection-foreground=F7F4E9
+selection-background=3E2F4A
 
-search-box-no-match=#F7F4E9 #653F73
-search-box-match=#0D0D1A #F0E68C
+search-box-no-match=F7F4E9 653F73
+search-box-match=0D0D1A F0E68C
 
-urls=#87CEEB
-jump-labels=#0D0D1A #F0E68C
+urls=87CEEB
+jump-labels=0D0D1A F0E68C
 
-regular0=#0D0D1A
-regular1=#FF7979
-regular2=#53D390
-regular3=#F0E68C
-regular4=#81C0FF
-regular5=#C695FF
-regular6=#68C0B6
-regular7=#DDDBD5
+regular0=0D0D1A
+regular1=FF7979
+regular2=53D390
+regular3=F0E68C
+regular4=81C0FF
+regular5=C695FF
+regular6=68C0B6
+regular7=DDDBD5
 
-bright0=#5E5D79
-bright1=#FFA0A0
-bright2=#96EA7F
-bright3=#F8B471
-bright4=#87CEEB
-bright5=#D2ADFF
-bright6=#8FD1C7
-bright7=#FFF9F2
-16=#FF9633
-17=#D6CE7C
+bright0=5E5D79
+bright1=FFA0A0
+bright2=96EA7F
+bright3=F8B471
+bright4=87CEEB
+bright5=D2ADFF
+bright6=8FD1C7
+bright7=FFF9F2
+16=FF9633
+17=D6CE7C
