--- a/extras/foot/themes/dark/oasis_sol_dark.ini
+++ b/extras/foot/themes/dark/oasis_sol_dark.ini
@@ -1,37 +1,37 @@
-; extras/foot/oasis_sol_dark.ini
-; name: Oasis Sol Dark
-; author: uhs-robert
+# extras/foot/oasis_sol_dark.ini
+# name: Oasis Sol Dark
+# author: uhs-robert
 
 [colors]
-cursor=#2F1815 #F0E68C
-foreground=#FFE0DA
-background=#2F1815
+cursor=2F1815 F0E68C
+foreground=FFE0DA
+background=2F1815
 
-selection-foreground=#FFE0DA
-selection-background=#4F312B
+selection-foreground=FFE0DA
+selection-background=4F312B
 
-search-box-no-match=#FFE0DA #345A2B
-search-box-match=#2F1815 #96EA7F
+search-box-no-match=FFE0DA 345A2B
+search-box-match=2F1815 96EA7F
 
-urls=#87CEEB
-jump-labels=#2F1815 #96EA7F
+urls=87CEEB
+jump-labels=2F1815 96EA7F
 
-regular0=#2F1815
-regular1=#FF7979
-regular2=#53D390
-regular3=#F0E68C
-regular4=#81C0FF
-regular5=#C695FF
-regular6=#68C0B6
-regular7=#DDDBD5
+regular0=2F1815
+regular1=FF7979
+regular2=53D390
+regular3=F0E68C
+regular4=81C0FF
+regular5=C695FF
+regular6=68C0B6
+regular7=DDDBD5
 
-bright0=#83615B
-bright1=#FFA0A0
-bright2=#96EA7F
-bright3=#F8B471
-bright4=#87CEEB
-bright5=#D2ADFF
-bright6=#8FD1C7
-bright7=#FFF9F2
-16=#FF9633
-17=#D6CE7C
+bright0=83615B
+bright1=FFA0A0
+bright2=96EA7F
+bright3=F8B471
+bright4=87CEEB
+bright5=D2ADFF
+bright6=8FD1C7
+bright7=FFF9F2
+16=FF9633
+17=D6CE7C
