--- a/extras/foot/themes/light/1/oasis_dune_light_1.ini
+++ b/extras/foot/themes/light/1/oasis_dune_light_1.ini
@@ -1,37 +1,37 @@
-; extras/foot/oasis_dune_light_1.ini
-; name: Oasis Dune Light 1
-; author: uhs-robert
+# extras/foot/oasis_dune_light_1.ini
+# name: Oasis Dune Light 1
+# author: uhs-robert
 
 [colors]
-cursor=#f9f8f5 #6d6219
-foreground=#58554c
-background=#f9f8f5
+cursor=f9f8f5 6d6219
+foreground=58554c
+background=f9f8f5
 
-selection-foreground=#58554c
-selection-background=#e8e4d8
+selection-foreground=58554c
+selection-background=e8e4d8
 
-search-box-no-match=#473c15 #dacfa4
-search-box-match=#210b32 #ab76d6
+search-box-no-match=473c15 dacfa4
+search-box-match=210b32 ab76d6
 
-urls=#2d5b6d
-jump-labels=#210b32 #ab76d6
+urls=2d5b6d
+jump-labels=210b32 ab76d6
 
-regular0=#555555
-regular1=#c21313
-regular2=#306d4d
-regular3=#696323
-regular4=#1662b0
-regular5=#8031de
-regular6=#366a65
-regular7=#58554d
+regular0=555555
+regular1=c21313
+regular2=306d4d
+regular3=696323
+regular4=1662b0
+regular5=8031de
+regular6=366a65
+regular7=58554d
 
-bright0=#5f5349
-bright1=#c21414
-bright2=#366e27
-bright3=#905215
-bright4=#266884
-bright5=#7f32de
-bright6=#366a62
-bright7=#7d490c
-16=#7a4a1d
-17=#b72b30
+bright0=5f5349
+bright1=c21414
+bright2=366e27
+bright3=905215
+bright4=266884
+bright5=7f32de
+bright6=366a62
+bright7=7d490c
+16=7a4a1d
+17=b72b30
