--- a/extras/foot/themes/light/1/oasis_midnight_light_1.ini
+++ b/extras/foot/themes/light/1/oasis_midnight_light_1.ini
@@ -1,37 +1,37 @@
-; extras/foot/oasis_midnight_light_1.ini
-; name: Oasis Midnight Light 1
-; author: uhs-robert
+# extras/foot/oasis_midnight_light_1.ini
+# name: Oasis Midnight Light 1
+# author: uhs-robert
 
 [colors]
-cursor=#f9f6f5 #b9252a
-foreground=#5c534c
-background=#f9f6f5
+cursor=f9f6f5 b9252a
+foreground=5c534c
+background=f9f6f5
 
-selection-foreground=#5c534c
-selection-background=#e8dcd8
+selection-foreground=5c534c
+selection-background=e8dcd8
 
-search-box-no-match=#4e0e0e #e19d9d
-search-box-match=#0d311d #7ad1a1
+search-box-no-match=4e0e0e e19d9d
+search-box-match=0d311d 7ad1a1
 
-urls=#2d5a6c
-jump-labels=#0d311d #7ad1a1
+urls=2d5a6c
+jump-labels=0d311d 7ad1a1
 
-regular0=#545454
-regular1=#c11313
-regular2=#2f6c4c
-regular3=#696223
-regular4=#1661ae
-regular5=#7f2fde
-regular6=#366964
-regular7=#57544c
+regular0=545454
+regular1=c11313
+regular2=2f6c4c
+regular3=696223
+regular4=1661ae
+regular5=7f2fde
+regular6=366964
+regular7=57544c
 
-bright0=#5f5249
-bright1=#c11313
-bright2=#366d27
-bright3=#8e5215
-bright4=#266783
-bright5=#7e30dd
-bright6=#356a61
-bright7=#7c480c
-16=#79491c
-17=#69612c
+bright0=5f5249
+bright1=c11313
+bright2=366d27
+bright3=8e5215
+bright4=266783
+bright5=7e30dd
+bright6=356a61
+bright7=7c480c
+16=79491c
+17=69612c
