--- a/extras/foot/themes/light/1/oasis_sol_light_1.ini
+++ b/extras/foot/themes/light/1/oasis_sol_light_1.ini
@@ -1,37 +1,37 @@
-; extras/foot/oasis_sol_light_1.ini
-; name: Oasis Sol Light 1
-; author: uhs-robert
+# extras/foot/oasis_sol_light_1.ini
+# name: Oasis Sol Light 1
+# author: uhs-robert
 
 [colors]
-cursor=#f9f5f5 #b6282c
-foreground=#814236
-background=#f9f5f5
+cursor=f9f5f5 b6282c
+foreground=814236
+background=f9f5f5
 
-selection-foreground=#814236
-selection-background=#e8d8d8
+selection-foreground=814236
+selection-background=e8d8d8
 
-search-box-no-match=#4e0e0e #e19d9d
-search-box-match=#0d311f #7ad1a7
+search-box-no-match=4e0e0e e19d9d
+search-box-match=0d311f 7ad1a7
 
-urls=#2d5a6c
-jump-labels=#0d311f #7ad1a7
+urls=2d5a6c
+jump-labels=0d311f 7ad1a7
 
-regular0=#545454
-regular1=#c01313
-regular2=#2f6b4c
-regular3=#686223
-regular4=#1561ad
-regular5=#7f2fdd
-regular6=#366963
-regular7=#57544c
+regular0=545454
+regular1=c01313
+regular2=2f6b4c
+regular3=686223
+regular4=1561ad
+regular5=7f2fdd
+regular6=366963
+regular7=57544c
 
-bright0=#5e5248
-bright1=#c01313
-bright2=#366c27
-bright3=#8e5115
-bright4=#256782
-bright5=#7e2fdd
-bright6=#356961
-bright7=#7b480c
-16=#78491c
-17=#69612c
+bright0=5e5248
+bright1=c01313
+bright2=366c27
+bright3=8e5115
+bright4=256782
+bright5=7e2fdd
+bright6=356961
+bright7=7b480c
+16=78491c
+17=69612c
