--- a/extras/foot/themes/light/2/oasis_midnight_light_2.ini
+++ b/extras/foot/themes/light/2/oasis_midnight_light_2.ini
@@ -1,37 +1,37 @@
-; extras/foot/oasis_midnight_light_2.ini
-; name: Oasis Midnight Light 2
-; author: uhs-robert
+# extras/foot/oasis_midnight_light_2.ini
+# name: Oasis Midnight Light 2
+# author: uhs-robert
 
 [colors]
-cursor=#f8eee7 #b22328
-foreground=#584f48
-background=#f8eee7
+cursor=f8eee7 b22328
+foreground=584f48
+background=f8eee7
 
-selection-foreground=#584f48
-selection-background=#eed5c3
+selection-foreground=584f48
+selection-background=eed5c3
 
-search-box-no-match=#4e0e0e #e19d9d
-search-box-match=#0d311d #7ad1a1
+search-box-no-match=4e0e0e e19d9d
+search-box-match=0d311d 7ad1a1
 
-urls=#2b5667
-jump-labels=#0d311d #7ad1a1
+urls=2b5667
+jump-labels=0d311d 7ad1a1
 
-regular0=#505050
-regular1=#b91313
-regular2=#2e6749
-regular3=#655e22
-regular4=#155da7
-regular5=#7b28dc
-regular6=#34655f
-regular7=#535048
+regular0=505050
+regular1=b91313
+regular2=2e6749
+regular3=655e22
+regular4=155da7
+regular5=7b28dc
+regular6=34655f
+regular7=535048
 
-bright0=#5a4e46
-bright1=#b91313
-bright2=#346826
-bright3=#884e14
-bright4=#24637d
-bright5=#7929dc
-bright6=#33655e
-bright7=#76450c
-16=#73461b
-17=#645d2a
+bright0=5a4e46
+bright1=b91313
+bright2=346826
+bright3=884e14
+bright4=24637d
+bright5=7929dc
+bright6=33655e
+bright7=76450c
+16=73461b
+17=645d2a
