--- a/extras/foot/themes/light/2/oasis_mirage_light_2.ini
+++ b/extras/foot/themes/light/2/oasis_mirage_light_2.ini
@@ -1,37 +1,37 @@
-; extras/foot/oasis_mirage_light_2.ini
-; name: Oasis Mirage Light 2
-; author: uhs-robert
+# extras/foot/oasis_mirage_light_2.ini
+# name: Oasis Mirage Light 2
+# author: uhs-robert
 
 [colors]
-cursor=#ebf9f9 #356962
-foreground=#425858
-background=#ebf9f9
+cursor=ebf9f9 356962
+foreground=425858
+background=ebf9f9
 
-selection-foreground=#425858
-selection-background=#c8eeee
+selection-foreground=425858
+selection-background=c8eeee
 
-search-box-no-match=#0f4c44 #9fe0d7
-search-box-match=#351908 #dd986f
+search-box-no-match=0f4c44 9fe0d7
+search-box-match=351908 dd986f
 
-urls=#2d5a6c
-jump-labels=#351908 #dd986f
+urls=2d5a6c
+jump-labels=351908 dd986f
 
-regular0=#545454
-regular1=#c01313
-regular2=#306b4c
-regular3=#686123
-regular4=#1561ae
-regular5=#7f2fdd
-regular6=#366963
-regular7=#57544b
+regular0=545454
+regular1=c01313
+regular2=306b4c
+regular3=686123
+regular4=1561ae
+regular5=7f2fdd
+regular6=366963
+regular7=57544b
 
-bright0=#5e5249
-bright1=#c01313
-bright2=#366d27
-bright3=#8e5115
-bright4=#256782
-bright5=#7e30dd
-bright6=#356961
-bright7=#7b480c
-16=#78491c
-17=#b7282c
+bright0=5e5249
+bright1=c01313
+bright2=366d27
+bright3=8e5115
+bright4=256782
+bright5=7e30dd
+bright6=356961
+bright7=7b480c
+16=78491c
+17=b7282c
