--- a/extras/foot/themes/light/2/oasis_night_light_2.ini
+++ b/extras/foot/themes/light/2/oasis_night_light_2.ini
@@ -1,37 +1,37 @@
-; extras/foot/oasis_night_light_2.ini
-; name: Oasis Night Light 2
-; author: uhs-robert
+# extras/foot/oasis_night_light_2.ini
+# name: Oasis Night Light 2
+# author: uhs-robert
 
 [colors]
-cursor=#e9deb9 #7e430e
-foreground=#54432d
-background=#e9deb9
+cursor=e9deb9 7e430e
+foreground=54432d
+background=e9deb9
 
-selection-foreground=#54432d
-selection-background=#decd96
+selection-foreground=54432d
+selection-background=decd96
 
-search-box-no-match=#4e260e #e1b69d
-search-box-match=#350808 #dd6f6f
+search-box-no-match=4e260e e1b69d
+search-box-match=350808 dd6f6f
 
-urls=#254b5a
-jump-labels=#350808 #dd6f6f
+urls=254b5a
+jump-labels=350808 dd6f6f
 
-regular0=#653d15
-regular1=#a51111
-regular2=#295c41
-regular3=#59531e
-regular4=#125395
-regular5=#6d21c7
-regular6=#2e5954
-regular7=#48463f
+regular0=653d15
+regular1=a51111
+regular2=295c41
+regular3=59531e
+regular4=125395
+regular5=6d21c7
+regular6=2e5954
+regular7=48463f
 
-bright0=#584131
-bright1=#a51111
-bright2=#2e5c22
-bright3=#794512
-bright4=#20586f
-bright5=#6c21c8
-bright6=#2e5a53
-bright7=#673c0a
-16=#643d18
-17=#9f1f24
+bright0=584131
+bright1=a51111
+bright2=2e5c22
+bright3=794512
+bright4=20586f
+bright5=6c21c8
+bright6=2e5a53
+bright7=673c0a
+16=643d18
+17=9f1f24
