--- a/extras/foot/themes/light/2/oasis_rose_light_2.ini
+++ b/extras/foot/themes/light/2/oasis_rose_light_2.ini
@@ -1,37 +1,37 @@
-; extras/foot/oasis_rose_light_2.ini
-; name: Oasis Rose Light 2
-; author: uhs-robert
+# extras/foot/oasis_rose_light_2.ini
+# name: Oasis Rose Light 2
+# author: uhs-robert
 
 [colors]
-cursor=#f9ecf5 #b8141b
-foreground=#61495c
-background=#f9ecf5
+cursor=f9ecf5 b8141b
+foreground=61495c
+background=f9ecf5
 
-selection-foreground=#61495c
-selection-background=#eec9e3
+selection-foreground=61495c
+selection-background=eec9e3
 
-search-box-no-match=#481335 #dba3c6
-search-box-match=#09342f #72dacc
+search-box-no-match=481335 dba3c6
+search-box-match=09342f 72dacc
 
-urls=#2b5667
-jump-labels=#09342f #72dacc
+urls=2b5667
+jump-labels=09342f 72dacc
 
-regular0=#505050
-regular1=#b91313
-regular2=#2e6749
-regular3=#645e22
-regular4=#145da7
-regular5=#7a28db
-regular6=#34655f
-regular7=#535048
+regular0=505050
+regular1=b91313
+regular2=2e6749
+regular3=645e22
+regular4=145da7
+regular5=7a28db
+regular6=34655f
+regular7=535048
 
-bright0=#5a4e46
-bright1=#b91313
-bright2=#346826
-bright3=#884e14
-bright4=#24637d
-bright5=#7929dc
-bright6=#33655e
-bright7=#76450c
-16=#73461b
-17=#645d2a
+bright0=5a4e46
+bright1=b91313
+bright2=346826
+bright3=884e14
+bright4=24637d
+bright5=7929dc
+bright6=33655e
+bright7=76450c
+16=73461b
+17=645d2a
