--- a/extras/foot/themes/light/2/oasis_sol_light_2.ini
+++ b/extras/foot/themes/light/2/oasis_sol_light_2.ini
@@ -1,37 +1,37 @@
-; extras/foot/oasis_sol_light_2.ini
-; name: Oasis Sol Light 2
-; author: uhs-robert
+# extras/foot/oasis_sol_light_2.ini
+# name: Oasis Sol Light 2
+# author: uhs-robert
 
 [colors]
-cursor=#f8eae7 #ad262a
-foreground=#793e33
-background=#f8eae7
+cursor=f8eae7 ad262a
+foreground=793e33
+background=f8eae7
 
-selection-foreground=#793e33
-selection-background=#eecbc3
+selection-foreground=793e33
+selection-background=eecbc3
 
-search-box-no-match=#4e0e0e #e19d9d
-search-box-match=#0d311f #7ad1a7
+search-box-no-match=4e0e0e e19d9d
+search-box-match=0d311f 7ad1a7
 
-urls=#2a5465
-jump-labels=#0d311f #7ad1a7
+urls=2a5465
+jump-labels=0d311f 7ad1a7
 
-regular0=#4f4f4f
-regular1=#b61212
-regular2=#2d6548
-regular3=#635c21
-regular4=#145ca4
-regular5=#7925db
-regular6=#33635d
-regular7=#524f47
+regular0=4f4f4f
+regular1=b61212
+regular2=2d6548
+regular3=635c21
+regular4=145ca4
+regular5=7925db
+regular6=33635d
+regular7=524f47
 
-bright0=#594d45
-bright1=#b61212
-bright2=#336625
-bright3=#864d14
-bright4=#23627b
-bright5=#7826db
-bright6=#33635c
-bright7=#74430b
-16=#71451b
-17=#635c29
+bright0=594d45
+bright1=b61212
+bright2=336625
+bright3=864d14
+bright4=23627b
+bright5=7826db
+bright6=33635c
+bright7=74430b
+16=71451b
+17=635c29
