--- a/extras/foot/themes/light/2/oasis_starlight_light_2.ini
+++ b/extras/foot/themes/light/2/oasis_starlight_light_2.ini
@@ -1,37 +1,37 @@
-; extras/foot/oasis_starlight_light_2.ini
-; name: Oasis Starlight Light 2
-; author: uhs-robert
+# extras/foot/oasis_starlight_light_2.ini
+# name: Oasis Starlight Light 2
+# author: uhs-robert
 
 [colors]
-cursor=#f9f5ec #1462a7
-foreground=#5b5341
-background=#f9f5ec
+cursor=f9f5ec 1462a7
+foreground=5b5341
+background=f9f5ec
 
-selection-foreground=#5b5341
-selection-background=#eee3c9
+selection-foreground=5b5341
+selection-background=eee3c9
 
-search-box-no-match=#473c15 #dacfa4
-search-box-match=#351908 #dd986f
+search-box-no-match=473c15 dacfa4
+search-box-match=351908 dd986f
 
-urls=#2d596b
-jump-labels=#351908 #dd986f
+urls=2d596b
+jump-labels=351908 dd986f
 
-regular0=#545454
-regular1=#bf1313
-regular2=#306b4b
-regular3=#686123
-regular4=#1561ad
-regular5=#7f2edd
-regular6=#366862
-regular7=#56544b
+regular0=545454
+regular1=bf1313
+regular2=306b4b
+regular3=686123
+regular4=1561ad
+regular5=7f2edd
+regular6=366862
+regular7=56544b
 
-bright0=#5e5149
-bright1=#bf1313
-bright2=#366c27
-bright3=#8d5115
-bright4=#256781
-bright5=#7d2fdd
-bright6=#356961
-bright7=#7a470c
-16=#77491c
-17=#be151c
+bright0=5e5149
+bright1=bf1313
+bright2=366c27
+bright3=8d5115
+bright4=256781
+bright5=7d2fdd
+bright6=356961
+bright7=7a470c
+16=77491c
+17=be151c
