--- a/extras/foot/themes/light/2/oasis_twilight_light_2.ini
+++ b/extras/foot/themes/light/2/oasis_twilight_light_2.ini
@@ -1,37 +1,37 @@
-; extras/foot/oasis_twilight_light_2.ini
-; name: Oasis Twilight Light 2
-; author: uhs-robert
+# extras/foot/oasis_twilight_light_2.ini
+# name: Oasis Twilight Light 2
+# author: uhs-robert
 
 [colors]
-cursor=#efecf9 #7f18e1
-foreground=#544975
-background=#efecf9
+cursor=efecf9 7f18e1
+foreground=544975
+background=efecf9
 
-selection-foreground=#544975
-selection-background=#d2c9ee
+selection-foreground=544975
+selection-background=d2c9ee
 
-search-box-no-match=#31124a #c3a1dd
-search-box-match=#31290d #d1be7a
+search-box-no-match=31124a c3a1dd
+search-box-match=31290d d1be7a
 
-urls=#2a5566
-jump-labels=#31290d #d1be7a
+urls=2a5566
+jump-labels=31290d d1be7a
 
-regular0=#4f4f4f
-regular1=#b71212
-regular2=#2e6648
-regular3=#635d21
-regular4=#145ca5
-regular5=#7925db
-regular6=#33645e
-regular7=#524f47
+regular0=4f4f4f
+regular1=b71212
+regular2=2e6648
+regular3=635d21
+regular4=145ca5
+regular5=7925db
+regular6=33645e
+regular7=524f47
 
-bright0=#594d45
-bright1=#b71212
-bright2=#346725
-bright3=#874d14
-bright4=#23627b
-bright5=#7827db
-bright6=#33645c
-bright7=#75440b
-16=#71451b
-17=#b02328
+bright0=594d45
+bright1=b71212
+bright2=346725
+bright3=874d14
+bright4=23627b
+bright5=7827db
+bright6=33645c
+bright7=75440b
+16=71451b
+17=b02328
