--- a/extras/foot/themes/light/3/oasis_abyss_light_3.ini
+++ b/extras/foot/themes/light/3/oasis_abyss_light_3.ini
@@ -1,37 +1,37 @@
-; extras/foot/oasis_abyss_light_3.ini
-; name: Oasis Abyss Light 3
-; author: uhs-robert
+# extras/foot/oasis_abyss_light_3.ini
+# name: Oasis Abyss Light 3
+# author: uhs-robert
 
 [colors]
-cursor=#f7e5d4 #ab1e22
-foreground=#524b43
-background=#f7e5d4
+cursor=f7e5d4 ab1e22
+foreground=524b43
+background=f7e5d4
 
-selection-foreground=#524b43
-selection-background=#f0cead
+selection-foreground=524b43
+selection-background=f0cead
 
-search-box-no-match=#4e0e0e #e19d9d
-search-box-match=#0d311d #7ad1a1
+search-box-no-match=4e0e0e e19d9d
+search-box-match=0d311d 7ad1a1
 
-urls=#285162
-jump-labels=#0d311d #7ad1a1
+urls=285162
+jump-labels=0d311d 7ad1a1
 
-regular0=#4c4c4c
-regular1=#b01212
-regular2=#2c6245
-regular3=#605920
-regular4=#13599e
-regular5=#7523d5
-regular6=#31605b
-regular7=#4f4c44
+regular0=4c4c4c
+regular1=b01212
+regular2=2c6245
+regular3=605920
+regular4=13599e
+regular5=7523d5
+regular6=31605b
+regular7=4f4c44
 
-bright0=#554a42
-bright1=#b01212
-bright2=#326324
-bright3=#824a14
-bright4=#225f77
-bright5=#7423d6
-bright6=#316059
-bright7=#70410b
-16=#6d421a
-17=#605928
+bright0=554a42
+bright1=b01212
+bright2=326324
+bright3=824a14
+bright4=225f77
+bright5=7423d6
+bright6=316059
+bright7=70410b
+16=6d421a
+17=605928
