--- a/extras/foot/themes/light/3/oasis_cactus_light_3.ini
+++ b/extras/foot/themes/light/3/oasis_cactus_light_3.ini
@@ -1,37 +1,37 @@
-; extras/foot/oasis_cactus_light_3.ini
-; name: Oasis Cactus Light 3
-; author: uhs-robert
+# extras/foot/oasis_cactus_light_3.ini
+# name: Oasis Cactus Light 3
+# author: uhs-robert
 
 [colors]
-cursor=#e0f0e7 #3a643d
-foreground=#405348
-background=#e0f0e7
+cursor=e0f0e7 3a643d
+foreground=405348
+background=e0f0e7
 
-selection-foreground=#405348
-selection-background=#c1e1cf
+selection-foreground=405348
+selection-background=c1e1cf
 
-search-box-no-match=#15472f #a4dac0
-search-box-match=#350808 #dd6f6f
+search-box-no-match=15472f a4dac0
+search-box-match=350808 dd6f6f
 
-urls=#2a5465
-jump-labels=#350808 #dd6f6f
+urls=2a5465
+jump-labels=350808 dd6f6f
 
-regular0=#4e4e4e
-regular1=#b51212
-regular2=#2d6547
-regular3=#625c21
-regular4=#145ca2
-regular5=#7823db
-regular6=#32635d
-regular7=#514e47
+regular0=4e4e4e
+regular1=b51212
+regular2=2d6547
+regular3=625c21
+regular4=145ca2
+regular5=7823db
+regular6=32635d
+regular7=514e47
 
-bright0=#574c44
-bright1=#b51212
-bright2=#336625
-bright3=#864d14
-bright4=#23617a
-bright5=#7725db
-bright6=#32635c
-bright7=#73430b
-16=#70441b
-17=#ac2529
+bright0=574c44
+bright1=b51212
+bright2=336625
+bright3=864d14
+bright4=23617a
+bright5=7725db
+bright6=32635c
+bright7=73430b
+16=70441b
+17=ac2529
