--- a/extras/foot/themes/light/3/oasis_canyon_light_3.ini
+++ b/extras/foot/themes/light/3/oasis_canyon_light_3.ini
@@ -1,37 +1,37 @@
-; extras/foot/oasis_canyon_light_3.ini
-; name: Oasis Canyon Light 3
-; author: uhs-robert
+# extras/foot/oasis_canyon_light_3.ini
+# name: Oasis Canyon Light 3
+# author: uhs-robert
 
 [colors]
-cursor=#f7e7d4 #89480f
-foreground=#5d4a33
-background=#f7e7d4
+cursor=f7e7d4 89480f
+foreground=5d4a33
+background=f7e7d4
 
-selection-foreground=#5d4a33
-selection-background=#f0d1ad
+selection-foreground=5d4a33
+selection-background=f0d1ad
 
-search-box-no-match=#4e260e #e1b69d
-search-box-match=#092234 #72aeda
+search-box-no-match=4e260e e1b69d
+search-box-match=092234 72aeda
 
-urls=#295263
-jump-labels=#092234 #72aeda
+urls=295263
+jump-labels=092234 72aeda
 
-regular0=#4d4d4d
-regular1=#b21212
-regular2=#2c6346
-regular3=#615a20
-regular4=#135a9f
-regular5=#7623d7
-regular6=#31615b
-regular7=#504d45
+regular0=4d4d4d
+regular1=b21212
+regular2=2c6346
+regular3=615a20
+regular4=135a9f
+regular5=7623d7
+regular6=31615b
+regular7=504d45
 
-bright0=#564b43
-bright1=#b21212
-bright2=#326424
-bright3=#834b14
-bright4=#225f77
-bright5=#7523d8
-bright6=#31615a
-bright7=#71420b
-16=#6e431b
-17=#ab2126
+bright0=564b43
+bright1=b21212
+bright2=326424
+bright3=834b14
+bright4=225f77
+bright5=7523d8
+bright6=31615a
+bright7=71420b
+16=6e431b
+17=ab2126
