--- a/extras/foot/themes/light/3/oasis_dune_light_3.ini
+++ b/extras/foot/themes/light/3/oasis_dune_light_3.ini
@@ -1,37 +1,37 @@
-; extras/foot/oasis_dune_light_3.ini
-; name: Oasis Dune Light 3
-; author: uhs-robert
+# extras/foot/oasis_dune_light_3.ini
+# name: Oasis Dune Light 3
+# author: uhs-robert
 
 [colors]
-cursor=#f4efdd #685c19
-foreground=#525047
-background=#f4efdd
+cursor=f4efdd 685c19
+foreground=525047
+background=f4efdd
 
-selection-foreground=#525047
-selection-background=#e9dfba
+selection-foreground=525047
+selection-background=e9dfba
 
-search-box-no-match=#473c15 #dacfa4
-search-box-match=#210b32 #ab76d6
+search-box-no-match=473c15 dacfa4
+search-box-match=210b32 ab76d6
 
-urls=#2b5567
-jump-labels=#210b32 #ab76d6
+urls=2b5567
+jump-labels=210b32 ab76d6
 
-regular0=#505050
-regular1=#b81313
-regular2=#2e6749
-regular3=#645d21
-regular4=#145da5
-regular5=#7a26dc
-regular6=#33645f
-regular7=#535048
+regular0=505050
+regular1=b81313
+regular2=2e6749
+regular3=645d21
+regular4=145da5
+regular5=7a26dc
+regular6=33645f
+regular7=535048
 
-bright0=#594e45
-bright1=#b81313
-bright2=#346826
-bright3=#884e14
-bright4=#23637c
-bright5=#7928dc
-bright6=#33645d
-bright7=#76440b
-16=#73461c
-17=#ad2a2e
+bright0=594e45
+bright1=b81313
+bright2=346826
+bright3=884e14
+bright4=23637c
+bright5=7928dc
+bright6=33645d
+bright7=76440b
+16=73461c
+17=ad2a2e
