--- a/extras/foot/themes/light/3/oasis_lagoon_light_3.ini
+++ b/extras/foot/themes/light/3/oasis_lagoon_light_3.ini
@@ -1,37 +1,37 @@
-; extras/foot/oasis_lagoon_light_3.ini
-; name: Oasis Lagoon Light 3
-; author: uhs-robert
+# extras/foot/oasis_lagoon_light_3.ini
+# name: Oasis Lagoon Light 3
+# author: uhs-robert
 
 [colors]
-cursor=#d9e5f7 #125895
-foreground=#384b68
-background=#d9e5f7
+cursor=d9e5f7 125895
+foreground=384b68
+background=d9e5f7
 
-selection-foreground=#384b68
-selection-background=#b3cbef
+selection-foreground=384b68
+selection-background=b3cbef
 
-search-box-no-match=#0f384c #9fcae0
-search-box-match=#351908 #dd986f
+search-box-no-match=0f384c 9fcae0
+search-box-match=351908 dd986f
 
-urls=#274f5f
-jump-labels=#351908 #dd986f
+urls=274f5f
+jump-labels=351908 dd986f
 
-regular0=#4a4a4a
-regular1=#ac1111
-regular2=#2b6044
-regular3=#5d571f
-regular4=#13579a
-regular5=#7222cf
-regular6=#305d58
-regular7=#4d4a42
+regular0=4a4a4a
+regular1=ac1111
+regular2=2b6044
+regular3=5d571f
+regular4=13579a
+regular5=7222cf
+regular6=305d58
+regular7=4d4a42
 
-bright0=#524840
-bright1=#ac1111
-bright2=#306023
-bright3=#7e4813
-bright4=#215c74
-bright5=#7122d1
-bright6=#2f5d57
-bright7=#6c3f0b
-16=#69401a
-17=#a71e21
+bright0=524840
+bright1=ac1111
+bright2=306023
+bright3=7e4813
+bright4=215c74
+bright5=7122d1
+bright6=2f5d57
+bright7=6c3f0b
+16=69401a
+17=a71e21
