--- a/extras/foot/themes/light/3/oasis_night_light_3.ini
+++ b/extras/foot/themes/light/3/oasis_night_light_3.ini
@@ -1,37 +1,37 @@
-; extras/foot/oasis_night_light_3.ini
-; name: Oasis Night Light 3
-; author: uhs-robert
+# extras/foot/oasis_night_light_3.ini
+# name: Oasis Night Light 3
+# author: uhs-robert
 
 [colors]
-cursor=#e6dbb2 #7c410d
-foreground=#52412d
-background=#e6dbb2
+cursor=e6dbb2 7c410d
+foreground=52412d
+background=e6dbb2
 
-selection-foreground=#52412d
-selection-background=#dbca8f
+selection-foreground=52412d
+selection-background=dbca8f
 
-search-box-no-match=#4e260e #e1b69d
-search-box-match=#350808 #dd6f6f
+search-box-no-match=4e260e e1b69d
+search-box-match=350808 dd6f6f
 
-urls=#244958
-jump-labels=#350808 #dd6f6f
+urls=244958
+jump-labels=350808 dd6f6f
 
-regular0=#623b14
-regular1=#a11010
-regular2=#285a3f
-regular3=#57511d
-regular4=#125190
-regular5=#6b20c3
-regular6=#2d5753
-regular7=#47443d
+regular0=623b14
+regular1=a11010
+regular2=285a3f
+regular3=57511d
+regular4=125190
+regular5=6b20c3
+regular6=2d5753
+regular7=47443d
 
-bright0=#573f30
-bright1=#a11010
-bright2=#2d5a21
-bright3=#774412
-bright4=#1f566c
-bright5=#6a20c4
-bright6=#2c5851
-bright7=#643a0a
-16=#623b18
-17=#9b1e23
+bright0=573f30
+bright1=a11010
+bright2=2d5a21
+bright3=774412
+bright4=1f566c
+bright5=6a20c4
+bright6=2c5851
+bright7=643a0a
+16=623b18
+17=9b1e23
