--- a/extras/foot/themes/light/3/oasis_sol_light_3.ini
+++ b/extras/foot/themes/light/3/oasis_sol_light_3.ini
@@ -1,37 +1,37 @@
-; extras/foot/oasis_sol_light_3.ini
-; name: Oasis Sol Light 3
-; author: uhs-robert
+# extras/foot/oasis_sol_light_3.ini
+# name: Oasis Sol Light 3
+# author: uhs-robert
 
 [colors]
-cursor=#f7d9d4 #9f2326
-foreground=#6d382e
-background=#f7d9d4
+cursor=f7d9d4 9f2326
+foreground=6d382e
+background=f7d9d4
 
-selection-foreground=#6d382e
-selection-background=#f0b7ad
+selection-foreground=6d382e
+selection-background=f0b7ad
 
-search-box-no-match=#4e0e0e #e19d9d
-search-box-match=#0d311f #7ad1a7
+search-box-no-match=4e0e0e e19d9d
+search-box-match=0d311f 7ad1a7
 
-urls=#264c5b
-jump-labels=#0d311f #7ad1a7
+urls=264c5b
+jump-labels=0d311f 7ad1a7
 
-regular0=#474747
-regular1=#a71111
-regular2=#295d41
-regular3=#5b541e
-regular4=#125495
-regular5=#6f21c9
-regular6=#2e5a55
-regular7=#4a4740
+regular0=474747
+regular1=a71111
+regular2=295d41
+regular3=5b541e
+regular4=125495
+regular5=6f21c9
+regular6=2e5a55
+regular7=4a4740
 
-bright0=#4f453e
-bright1=#a71111
-bright2=#2f5e22
-bright3=#7b4612
-bright4=#205970
-bright5=#6d21ca
-bright6=#2e5b54
-bright7=#683d0a
-16=#663e19
-17=#5b5425
+bright0=4f453e
+bright1=a71111
+bright2=2f5e22
+bright3=7b4612
+bright4=205970
+bright5=6d21ca
+bright6=2e5b54
+bright7=683d0a
+16=663e19
+17=5b5425
