--- a/extras/foot/themes/light/3/oasis_starlight_light_3.ini
+++ b/extras/foot/themes/light/3/oasis_starlight_light_3.ini
@@ -1,37 +1,37 @@
-; extras/foot/oasis_starlight_light_3.ini
-; name: Oasis Starlight Light 3
-; author: uhs-robert
+# extras/foot/oasis_starlight_light_3.ini
+# name: Oasis Starlight Light 3
+# author: uhs-robert
 
 [colors]
-cursor=#f4eddd #135d9e
-foreground=#564f3e
-background=#f4eddd
+cursor=f4eddd 135d9e
+foreground=564f3e
+background=f4eddd
 
-selection-foreground=#564f3e
-selection-background=#e9dbba
+selection-foreground=564f3e
+selection-background=e9dbba
 
-search-box-no-match=#473c15 #dacfa4
-search-box-match=#351908 #dd986f
+search-box-no-match=473c15 dacfa4
+search-box-match=351908 dd986f
 
-urls=#2a5466
-jump-labels=#351908 #dd986f
+urls=2a5466
+jump-labels=351908 dd986f
 
-regular0=#4f4f4f
-regular1=#b71212
-regular2=#2e6648
-regular3=#645d21
-regular4=#145ca4
-regular5=#7924dc
-regular6=#33635e
-regular7=#524f47
+regular0=4f4f4f
+regular1=b71212
+regular2=2e6648
+regular3=645d21
+regular4=145ca4
+regular5=7924dc
+regular6=33635e
+regular7=524f47
 
-bright0=#584d45
-bright1=#b71212
-bright2=#336725
-bright3=#874d14
-bright4=#23627b
-bright5=#7826dc
-bright6=#33645d
-bright7=#74440b
-16=#71451c
-17=#b61419
+bright0=584d45
+bright1=b71212
+bright2=336725
+bright3=874d14
+bright4=23627b
+bright5=7826dc
+bright6=33645d
+bright7=74440b
+16=71451c
+17=b61419
