--- a/extras/foot/themes/light/3/oasis_twilight_light_3.ini
+++ b/extras/foot/themes/light/3/oasis_twilight_light_3.ini
@@ -1,37 +1,37 @@
-; extras/foot/oasis_twilight_light_3.ini
-; name: Oasis Twilight Light 3
-; author: uhs-robert
+# extras/foot/oasis_twilight_light_3.ini
+# name: Oasis Twilight Light 3
+# author: uhs-robert
 
 [colors]
-cursor=#e2ddf4 #7416cd
-foreground=#4a4268
-background=#e2ddf4
+cursor=e2ddf4 7416cd
+foreground=4a4268
+background=e2ddf4
 
-selection-foreground=#4a4268
-selection-background=#c4bae9
+selection-foreground=4a4268
+selection-background=c4bae9
 
-search-box-no-match=#31124a #c3a1dd
-search-box-match=#31290d #d1be7a
+search-box-no-match=31124a c3a1dd
+search-box-match=31290d d1be7a
 
-urls=#264c5c
-jump-labels=#31290d #d1be7a
+urls=264c5c
+jump-labels=31290d d1be7a
 
-regular0=#474747
-regular1=#a71111
-regular2=#2a5d42
-regular3=#5b541e
-regular4=#125496
-regular5=#6f21ca
-regular6=#2e5b56
-regular7=#4a4740
+regular0=474747
+regular1=a71111
+regular2=2a5d42
+regular3=5b541e
+regular4=125496
+regular5=6f21ca
+regular6=2e5b56
+regular7=4a4740
 
-bright0=#4f453e
-bright1=#a71111
-bright2=#2f5e22
-bright3=#7b4612
-bright4=#205970
-bright5=#6d21cb
-bright6=#2e5b54
-bright7=#693d0a
-16=#663e19
-17=#a11f24
+bright0=4f453e
+bright1=a71111
+bright2=2f5e22
+bright3=7b4612
+bright4=205970
+bright5=6d21cb
+bright6=2e5b54
+bright7=693d0a
+16=663e19
+17=a11f24
