--- a/extras/foot/themes/light/4/oasis_abyss_light_4.ini
+++ b/extras/foot/themes/light/4/oasis_abyss_light_4.ini
@@ -1,37 +1,37 @@
-; extras/foot/oasis_abyss_light_4.ini
-; name: Oasis Abyss Light 4
-; author: uhs-robert
+# extras/foot/oasis_abyss_light_4.ini
+# name: Oasis Abyss Light 4
+# author: uhs-robert
 
 [colors]
-cursor=#f5ddc7 #a41c20
-foreground=#4e473f
-background=#f5ddc7
+cursor=f5ddc7 a41c20
+foreground=4e473f
+background=f5ddc7
 
-selection-foreground=#4e473f
-selection-background=#eec5a0
+selection-foreground=4e473f
+selection-background=eec5a0
 
-search-box-no-match=#4e0e0e #e19d9d
-search-box-match=#0d311d #7ad1a1
+search-box-no-match=4e0e0e e19d9d
+search-box-match=0d311d 7ad1a1
 
-urls=#264d5d
-jump-labels=#0d311d #7ad1a1
+urls=264d5d
+jump-labels=0d311d 7ad1a1
 
-regular0=#484848
-regular1=#a91111
-regular2=#2a5e42
-regular3=#5b551f
-regular4=#125597
-regular5=#6f21cb
-regular6=#2f5b56
-regular7=#4a4841
+regular0=484848
+regular1=a91111
+regular2=2a5e42
+regular3=5b551f
+regular4=125597
+regular5=6f21cb
+regular6=2f5b56
+regular7=4a4841
 
-bright0=#50463f
-bright1=#a91010
-bright2=#305e23
-bright3=#7c4712
-bright4=#205a71
-bright5=#6f21cd
-bright6=#2f5c55
-bright7=#693e0b
-16=#673e19
-17=#5b5526
+bright0=50463f
+bright1=a91010
+bright2=305e23
+bright3=7c4712
+bright4=205a71
+bright5=6f21cd
+bright6=2f5c55
+bright7=693e0b
+16=673e19
+17=5b5526
