--- a/extras/foot/themes/light/4/oasis_dune_light_4.ini
+++ b/extras/foot/themes/light/4/oasis_dune_light_4.ini
@@ -1,37 +1,37 @@
-; extras/foot/oasis_dune_light_4.ini
-; name: Oasis Dune Light 4
-; author: uhs-robert
+# extras/foot/oasis_dune_light_4.ini
+# name: Oasis Dune Light 4
+# author: uhs-robert
 
 [colors]
-cursor=#f0e9d1 #635918
-foreground=#4f4d44
-background=#f0e9d1
+cursor=f0e9d1 635918
+foreground=4f4d44
+background=f0e9d1
 
-selection-foreground=#4f4d44
-selection-background=#e5d8ae
+selection-foreground=4f4d44
+selection-background=e5d8ae
 
-search-box-no-match=#473c15 #dacfa4
-search-box-match=#210b32 #ab76d6
+search-box-no-match=473c15 dacfa4
+search-box-match=210b32 ab76d6
 
-urls=#295263
-jump-labels=#210b32 #ab76d6
+urls=295263
+jump-labels=210b32 ab76d6
 
-regular0=#4c4c4c
-regular1=#b21212
-regular2=#2c6346
-regular3=#605a20
-regular4=#135a9f
-regular5=#7623d6
-regular6=#32605b
-regular7=#4f4d45
+regular0=4c4c4c
+regular1=b21212
+regular2=2c6346
+regular3=605a20
+regular4=135a9f
+regular5=7623d6
+regular6=32605b
+regular7=4f4d45
 
-bright0=#564b43
-bright1=#b21111
-bright2=#326425
-bright3=#834b13
-bright4=#225f78
-bright5=#7523d8
-bright6=#316159
-bright7=#70420b
-16=#6e431b
-17=#a7292d
+bright0=564b43
+bright1=b21111
+bright2=326425
+bright3=834b13
+bright4=225f78
+bright5=7523d8
+bright6=316159
+bright7=70420b
+16=6e431b
+17=a7292d
