--- a/extras/foot/themes/light/4/oasis_midnight_light_4.ini
+++ b/extras/foot/themes/light/4/oasis_midnight_light_4.ini
@@ -1,37 +1,37 @@
-; extras/foot/oasis_midnight_light_4.ini
-; name: Oasis Midnight Light 4
-; author: uhs-robert
+# extras/foot/oasis_midnight_light_4.ini
+# name: Oasis Midnight Light 4
+# author: uhs-robert
 
 [colors]
-cursor=#f5d8c7 #9e2023
-foreground=#4d443e
-background=#f5d8c7
+cursor=f5d8c7 9e2023
+foreground=4d443e
+background=f5d8c7
 
-selection-foreground=#4d443e
-selection-background=#eebda0
+selection-foreground=4d443e
+selection-background=eebda0
 
-search-box-no-match=#4e0e0e #e19d9d
-search-box-match=#0d311d #7ad1a1
+search-box-no-match=4e0e0e e19d9d
+search-box-match=0d311d 7ad1a1
 
-urls=#254a5a
-jump-labels=#0d311d #7ad1a1
+urls=254a5a
+jump-labels=0d311d 7ad1a1
 
-regular0=#464646
-regular1=#a51111
-regular2=#295b40
-regular3=#59531e
-regular4=#125393
-regular5=#6d21c6
-regular6=#2e5954
-regular7=#48463f
+regular0=464646
+regular1=a51111
+regular2=295b40
+regular3=59531e
+regular4=125393
+regular5=6d21c6
+regular6=2e5954
+regular7=48463f
 
-bright0=#4e443d
-bright1=#a51010
-bright2=#2e5c22
-bright3=#794512
-bright4=#1f586f
-bright5=#6c20c8
-bright6=#2e5953
-bright7=#663c0a
-16=#643d18
-17=#595325
+bright0=4e443d
+bright1=a51010
+bright2=2e5c22
+bright3=794512
+bright4=1f586f
+bright5=6c20c8
+bright6=2e5953
+bright7=663c0a
+16=643d18
+17=595325
