--- a/extras/foot/themes/light/4/oasis_mirage_light_4.ini
+++ b/extras/foot/themes/light/4/oasis_mirage_light_4.ini
@@ -1,37 +1,37 @@
-; extras/foot/oasis_mirage_light_4.ini
-; name: Oasis Mirage Light 4
-; author: uhs-robert
+# extras/foot/oasis_mirage_light_4.ini
+# name: Oasis Mirage Light 4
+# author: uhs-robert
 
 [colors]
-cursor=#cdf4f4 #31635c
-foreground=#3e5252
-background=#cdf4f4
+cursor=cdf4f4 31635c
+foreground=3e5252
+background=cdf4f4
 
-selection-foreground=#3e5252
-selection-background=#a7ecec
+selection-foreground=3e5252
+selection-background=a7ecec
 
-search-box-no-match=#0f4c44 #9fe0d7
-search-box-match=#351908 #dd986f
+search-box-no-match=0f4c44 9fe0d7
+search-box-match=351908 dd986f
 
-urls=#2a5465
-jump-labels=#351908 #dd986f
+urls=2a5465
+jump-labels=351908 dd986f
 
-regular0=#4f4f4f
-regular1=#b51212
-regular2=#2d6548
-regular3=#625c21
-regular4=#145ca2
-regular5=#7824db
-regular6=#33635e
-regular7=#514f47
+regular0=4f4f4f
+regular1=b51212
+regular2=2d6548
+regular3=625c21
+regular4=145ca2
+regular5=7824db
+regular6=33635e
+regular7=514f47
 
-bright0=#584d45
-bright1=#b61212
-bright2=#336625
-bright3=#864d14
-bright4=#23617a
-bright5=#7724dc
-bright6=#33635c
-bright7=#73430c
-16=#71441b
-17=#ad2529
+bright0=584d45
+bright1=b61212
+bright2=336625
+bright3=864d14
+bright4=23617a
+bright5=7724dc
+bright6=33635c
+bright7=73430c
+16=71441b
+17=ad2529
