--- a/extras/foot/themes/light/4/oasis_night_light_4.ini
+++ b/extras/foot/themes/light/4/oasis_night_light_4.ini
@@ -1,37 +1,37 @@
-; extras/foot/oasis_night_light_4.ini
-; name: Oasis Night Light 4
-; author: uhs-robert
+# extras/foot/oasis_night_light_4.ini
+# name: Oasis Night Light 4
+# author: uhs-robert
 
 [colors]
-cursor=#e3d7aa #783f0d
-foreground=#4f3f2b
-background=#e3d7aa
+cursor=e3d7aa 783f0d
+foreground=4f3f2b
+background=e3d7aa
 
-selection-foreground=#4f3f2b
-selection-background=#d8c688
+selection-foreground=4f3f2b
+selection-background=d8c688
 
-search-box-no-match=#4e260e #e1b69d
-search-box-match=#350808 #dd6f6f
+search-box-no-match=4e260e e1b69d
+search-box-match=350808 dd6f6f
 
-urls=#234655
-jump-labels=#350808 #dd6f6f
+urls=234655
+jump-labels=350808 dd6f6f
 
-regular0=#5f3913
-regular1=#9d1010
-regular2=#27573d
-regular3=#544f1c
-regular4=#114f8c
-regular5=#681fbd
-regular6=#2c5550
-regular7=#44423b
+regular0=5f3913
+regular1=9d1010
+regular2=27573d
+regular3=544f1c
+regular4=114f8c
+regular5=681fbd
+regular6=2c5550
+regular7=44423b
 
-bright0=#533d2e
-bright1=#9d0f0f
-bright2=#2c5820
-bright3=#734211
-bright4=#1e5369
-bright5=#671fbe
-bright6=#2b554e
-bright7=#60380a
-16=#5e3917
-17=#961e22
+bright0=533d2e
+bright1=9d0f0f
+bright2=2c5820
+bright3=734211
+bright4=1e5369
+bright5=671fbe
+bright6=2b554e
+bright7=60380a
+16=5e3917
+17=961e22
