--- a/extras/foot/themes/light/4/oasis_sol_light_4.ini
+++ b/extras/foot/themes/light/4/oasis_sol_light_4.ini
@@ -1,37 +1,37 @@
-; extras/foot/oasis_sol_light_4.ini
-; name: Oasis Sol Light 4
-; author: uhs-robert
+# extras/foot/oasis_sol_light_4.ini
+# name: Oasis Sol Light 4
+# author: uhs-robert
 
 [colors]
-cursor=#f5cdc7 #942023
-foreground=#64332a
-background=#f5cdc7
+cursor=f5cdc7 942023
+foreground=64332a
+background=f5cdc7
 
-selection-foreground=#64332a
-selection-background=#eeaaa0
+selection-foreground=64332a
+selection-background=eeaaa0
 
-search-box-no-match=#4e0e0e #e19d9d
-search-box-match=#0d311f #7ad1a7
+search-box-no-match=4e0e0e e19d9d
+search-box-match=0d311f 7ad1a7
 
-urls=#234554
-jump-labels=#0d311f #7ad1a7
+urls=234554
+jump-labels=0d311f 7ad1a7
 
-regular0=#414141
-regular1=#9c1010
-regular2=#26563d
-regular3=#544e1c
-regular4=#114e8b
-regular5=#671fbb
-regular6=#2b5450
-regular7=#43413a
+regular0=414141
+regular1=9c1010
+regular2=26563d
+regular3=544e1c
+regular4=114e8b
+regular5=671fbb
+regular6=2b5450
+regular7=43413a
 
-bright0=#493f39
-bright1=#9c0f0f
-bright2=#2c5720
-bright3=#724111
-bright4=#1e5368
-bright5=#661ebd
-bright6=#2b544e
-bright7=#5f380a
-16=#5d3917
-17=#544e23
+bright0=493f39
+bright1=9c0f0f
+bright2=2c5720
+bright3=724111
+bright4=1e5368
+bright5=661ebd
+bright6=2b544e
+bright7=5f380a
+16=5d3917
+17=544e23
