--- a/extras/foot/themes/light/4/oasis_starlight_light_4.ini
+++ b/extras/foot/themes/light/4/oasis_starlight_light_4.ini
@@ -1,37 +1,37 @@
-; extras/foot/oasis_starlight_light_4.ini
-; name: Oasis Starlight Light 4
-; author: uhs-robert
+# extras/foot/oasis_starlight_light_4.ini
+# name: Oasis Starlight Light 4
+# author: uhs-robert
 
 [colors]
-cursor=#f0e6d1 #125a97
-foreground=#524b3b
-background=#f0e6d1
+cursor=f0e6d1 125a97
+foreground=524b3b
+background=f0e6d1
 
-selection-foreground=#524b3b
-selection-background=#e5d3ae
+selection-foreground=524b3b
+selection-background=e5d3ae
 
-search-box-no-match=#473c15 #dacfa4
-search-box-match=#351908 #dd986f
+search-box-no-match=473c15 dacfa4
+search-box-match=351908 dd986f
 
-urls=#285061
-jump-labels=#351908 #dd986f
+urls=285061
+jump-labels=351908 dd986f
 
-regular0=#4b4b4b
-regular1=#af1212
-regular2=#2b6245
-regular3=#5f5820
-regular4=#13589d
-regular5=#7423d3
-regular6=#315f5a
-regular7=#4e4b44
+regular0=4b4b4b
+regular1=af1212
+regular2=2b6245
+regular3=5f5820
+regular4=13589d
+regular5=7423d3
+regular6=315f5a
+regular7=4e4b44
 
-bright0=#544942
-bright1=#af1111
-bright2=#326224
-bright3=#814a13
-bright4=#215e76
-bright5=#7322d5
-bright6=#315f58
-bright7=#6e400b
-16=#6c411a
-17=#af1319
+bright0=544942
+bright1=af1111
+bright2=326224
+bright3=814a13
+bright4=215e76
+bright5=7322d5
+bright6=315f58
+bright7=6e400b
+16=6c411a
+17=af1319
