--- a/extras/foot/themes/light/5/oasis_abyss_light_5.ini
+++ b/extras/foot/themes/light/5/oasis_abyss_light_5.ini
@@ -1,37 +1,37 @@
-; extras/foot/oasis_abyss_light_5.ini
-; name: Oasis Abyss Light 5
-; author: uhs-robert
+# extras/foot/oasis_abyss_light_5.ini
+# name: Oasis Abyss Light 5
+# author: uhs-robert
 
 [colors]
-cursor=#f3d2ba #991c1f
-foreground=#48413b
-background=#f3d2ba
+cursor=f3d2ba 991c1f
+foreground=48413b
+background=f3d2ba
 
-selection-foreground=#48413b
-selection-background=#ecb893
+selection-foreground=48413b
+selection-background=ecb893
 
-search-box-no-match=#4e0e0e #e19d9d
-search-box-match=#0d311d #7ad1a1
+search-box-no-match=4e0e0e e19d9d
+search-box-match=0d311d 7ad1a1
 
-urls=#234756
-jump-labels=#0d311d #7ad1a1
+urls=234756
+jump-labels=0d311d 7ad1a1
 
-regular0=#424242
-regular1=#9f0f0f
-regular2=#27583e
-regular3=#554f1c
-regular4=#11508d
-regular5=#691fbe
-regular6=#2c5651
-regular7=#45433c
+regular0=424242
+regular1=9f0f0f
+regular2=27583e
+regular3=554f1c
+regular4=11508d
+regular5=691fbe
+regular6=2c5651
+regular7=45433c
 
-bright0=#4a4139
-bright1=#9e0f0f
-bright2=#2c5920
-bright3=#744211
-bright4=#1e546a
-bright5=#681fbf
-bright6=#2b564f
-bright7=#62390a
-16=#5f3a17
-17=#564f24
+bright0=4a4139
+bright1=9e0f0f
+bright2=2c5920
+bright3=744211
+bright4=1e546a
+bright5=681fbf
+bright6=2b564f
+bright7=62390a
+16=5f3a17
+17=564f24
