--- a/extras/foot/themes/light/5/oasis_canyon_light_5.ini
+++ b/extras/foot/themes/light/5/oasis_canyon_light_5.ini
@@ -1,37 +1,37 @@
-; extras/foot/oasis_canyon_light_5.ini
-; name: Oasis Canyon Light 5
-; author: uhs-robert
+# extras/foot/oasis_canyon_light_5.ini
+# name: Oasis Canyon Light 5
+# author: uhs-robert
 
 [colors]
-cursor=#f3d5ba #7c400d
-foreground=#52412d
-background=#f3d5ba
+cursor=f3d5ba 7c400d
+foreground=52412d
+background=f3d5ba
 
-selection-foreground=#52412d
-selection-background=#ecbd93
+selection-foreground=52412d
+selection-background=ecbd93
 
-search-box-no-match=#4e260e #e1b69d
-search-box-match=#092234 #72aeda
+search-box-no-match=4e260e e1b69d
+search-box-match=092234 72aeda
 
-urls=#244857
-jump-labels=#092234 #72aeda
+urls=244857
+jump-labels=092234 72aeda
 
-regular0=#444444
-regular1=#a11010
-regular2=#28593f
-regular3=#56511d
-regular4=#11518f
-regular5=#6b1fc2
-regular6=#2d5752
-regular7=#46443d
+regular0=444444
+regular1=a11010
+regular2=28593f
+regular3=56511d
+regular4=11518f
+regular5=6b1fc2
+regular6=2d5752
+regular7=46443d
 
-bright0=#4b423a
-bright1=#a11010
-bright2=#2d5a20
-bright3=#764311
-bright4=#1f566c
-bright5=#6a20c2
-bright6=#2c5750
-bright7=#643a0a
-16=#613b18
-17=#9b1e22
+bright0=4b423a
+bright1=a11010
+bright2=2d5a20
+bright3=764311
+bright4=1f566c
+bright5=6a20c2
+bright6=2c5750
+bright7=643a0a
+16=613b18
+17=9b1e22
