--- a/extras/foot/themes/light/5/oasis_lagoon_light_5.ini
+++ b/extras/foot/themes/light/5/oasis_lagoon_light_5.ini
@@ -1,37 +1,37 @@
-; extras/foot/oasis_lagoon_light_5.ini
-; name: Oasis Lagoon Light 5
-; author: uhs-robert
+# extras/foot/oasis_lagoon_light_5.ini
+# name: Oasis Lagoon Light 5
+# author: uhs-robert
 
 [colors]
-cursor=#bcd6f5 #104d84
-foreground=#30405b
-background=#bcd6f5
+cursor=bcd6f5 104d84
+foreground=30405b
+background=bcd6f5
 
-selection-foreground=#30405b
-selection-background=#94beef
+selection-foreground=30405b
+selection-background=94beef
 
-search-box-no-match=#0f384c #9fcae0
-search-box-match=#351908 #dd986f
+search-box-no-match=0f384c 9fcae0
+search-box-match=351908 dd986f
 
-urls=#224452
-jump-labels=#351908 #dd986f
+urls=224452
+jump-labels=351908 dd986f
 
-regular0=#404040
-regular1=#990f0f
-regular2=#26543c
-regular3=#524d1b
-regular4=#104d88
-regular5=#651eb8
-regular6=#2a524e
-regular7=#413f39
+regular0=404040
+regular1=990f0f
+regular2=26543c
+regular3=524d1b
+regular4=104d88
+regular5=651eb8
+regular6=2a524e
+regular7=413f39
 
-bright0=#463e37
-bright1=#990f0f
-bright2=#2a551f
-bright3=#704010
-bright4=#1d5166
-bright5=#641eb8
-bright6=#2a534c
-bright7=#5d3609
-16=#5b3716
-17=#941b1e
+bright0=463e37
+bright1=990f0f
+bright2=2a551f
+bright3=704010
+bright4=1d5166
+bright5=641eb8
+bright6=2a534c
+bright7=5d3609
+16=5b3716
+17=941b1e
