--- a/extras/foot/themes/light/5/oasis_midnight_light_5.ini
+++ b/extras/foot/themes/light/5/oasis_midnight_light_5.ini
@@ -1,37 +1,37 @@
-; extras/foot/oasis_midnight_light_5.ini
-; name: Oasis Midnight Light 5
-; author: uhs-robert
+# extras/foot/oasis_midnight_light_5.ini
+# name: Oasis Midnight Light 5
+# author: uhs-robert
 
 [colors]
-cursor=#f3cdba #941d21
-foreground=#473f3a
-background=#f3cdba
+cursor=f3cdba 941d21
+foreground=473f3a
+background=f3cdba
 
-selection-foreground=#473f3a
-selection-background=#ecb193
+selection-foreground=473f3a
+selection-background=ecb193
 
-search-box-no-match=#4e0e0e #e19d9d
-search-box-match=#0d311d #7ad1a1
+search-box-no-match=4e0e0e e19d9d
+search-box-match=0d311d 7ad1a1
 
-urls=#224553
-jump-labels=#0d311d #7ad1a1
+urls=224553
+jump-labels=0d311d 7ad1a1
 
-regular0=#404040
-regular1=#9a0f0f
-regular2=#26553c
-regular3=#534d1b
-regular4=#114d89
-regular5=#661eb9
-regular6=#2b534e
-regular7=#42403a
+regular0=404040
+regular1=9a0f0f
+regular2=26553c
+regular3=534d1b
+regular4=114d89
+regular5=661eb9
+regular6=2b534e
+regular7=42403a
 
-bright0=#473f37
-bright1=#9a0f0f
-bright2=#2b561f
-bright3=#714011
-bright4=#1e5267
-bright5=#651fba
-bright6=#2a534d
-bright7=#5f370a
-16=#5c3816
-17=#534d23
+bright0=473f37
+bright1=9a0f0f
+bright2=2b561f
+bright3=714011
+bright4=1e5267
+bright5=651fba
+bright6=2a534d
+bright7=5f370a
+16=5c3816
+17=534d23
