--- a/extras/foot/themes/light/5/oasis_mirage_light_5.ini
+++ b/extras/foot/themes/light/5/oasis_mirage_light_5.ini
@@ -1,37 +1,37 @@
-; extras/foot/oasis_mirage_light_5.ini
-; name: Oasis Mirage Light 5
-; author: uhs-robert
+# extras/foot/oasis_mirage_light_5.ini
+# name: Oasis Mirage Light 5
+# author: uhs-robert
 
 [colors]
-cursor=#c0f2ee #31605a
-foreground=#3c5050
-background=#c0f2ee
+cursor=c0f2ee 31605a
+foreground=3c5050
+background=c0f2ee
 
-selection-foreground=#3c5050
-selection-background=#9aeae4
+selection-foreground=3c5050
+selection-background=9aeae4
 
-search-box-no-match=#0f4c44 #9fe0d7
-search-box-match=#351908 #dd986f
+search-box-no-match=0f4c44 9fe0d7
+search-box-match=351908 dd986f
 
-urls=#295162
-jump-labels=#351908 #dd986f
+urls=295162
+jump-labels=351908 dd986f
 
-regular0=#4c4c4c
-regular1=#b11111
-regular2=#2c6346
-regular3=#605a20
-regular4=#13599f
-regular5=#7523d5
-regular6=#31605b
-regular7=#4e4c44
+regular0=4c4c4c
+regular1=b11111
+regular2=2c6346
+regular3=605a20
+regular4=13599f
+regular5=7523d5
+regular6=31605b
+regular7=4e4c44
 
-bright0=#554a41
-bright1=#b11111
-bright2=#316424
-bright3=#834b13
-bright4=#225f77
-bright5=#7423d6
-bright6=#316159
-bright7=#70410b
-16=#6d421a
-17=#a82628
+bright0=554a41
+bright1=b11111
+bright2=316424
+bright3=834b13
+bright4=225f77
+bright5=7423d6
+bright6=316159
+bright7=70410b
+16=6d421a
+17=a82628
