--- a/extras/foot/themes/light/5/oasis_night_light_5.ini
+++ b/extras/foot/themes/light/5/oasis_night_light_5.ini
@@ -1,37 +1,37 @@
-; extras/foot/oasis_night_light_5.ini
-; name: Oasis Night Light 5
-; author: uhs-robert
+# extras/foot/oasis_night_light_5.ini
+# name: Oasis Night Light 5
+# author: uhs-robert
 
 [colors]
-cursor=#e0cfa3 #723b0c
-foreground=#4b3b28
-background=#e0cfa3
+cursor=e0cfa3 723b0c
+foreground=4b3b28
+background=e0cfa3
 
-selection-foreground=#4b3b28
-selection-background=#d5bd81
+selection-foreground=4b3b28
+selection-background=d5bd81
 
-search-box-no-match=#4e260e #e1b69d
-search-box-match=#350808 #dd6f6f
+search-box-no-match=4e260e e1b69d
+search-box-match=350808 dd6f6f
 
-urls=#21414f
-jump-labels=#350808 #dd6f6f
+urls=21414f
+jump-labels=350808 dd6f6f
 
-regular0=#583512
-regular1=#950e0e
-regular2=#24523a
-regular3=#504b1a
-regular4=#104b84
-regular5=#621db3
-regular6=#29504b
-regular7=#3f3d37
+regular0=583512
+regular1=950e0e
+regular2=24523a
+regular3=504b1a
+regular4=104b84
+regular5=621db3
+regular6=29504b
+regular7=3f3d37
 
-bright0=#4e392c
-bright1=#950e0e
-bright2=#29531e
-bright3=#6d3e10
-bright4=#1d4f63
-bright5=#621eb4
-bright6=#29504a
-bright7=#5a3509
-16=#583515
-17=#8f1c20
+bright0=4e392c
+bright1=950e0e
+bright2=29531e
+bright3=6d3e10
+bright4=1d4f63
+bright5=621eb4
+bright6=29504a
+bright7=5a3509
+16=583515
+17=8f1c20
