--- a/extras/foot/themes/light/5/oasis_starlight_light_5.ini
+++ b/extras/foot/themes/light/5/oasis_starlight_light_5.ini
@@ -1,37 +1,37 @@
-; extras/foot/oasis_starlight_light_5.ini
-; name: Oasis Starlight Light 5
-; author: uhs-robert
+# extras/foot/oasis_starlight_light_5.ini
+# name: Oasis Starlight Light 5
+# author: uhs-robert
 
 [colors]
-cursor=#f3deba #125592
-foreground=#4d4738
-background=#f3deba
+cursor=f3deba 125592
+foreground=4d4738
+background=f3deba
 
-selection-foreground=#4d4738
-selection-background=#eccb93
+selection-foreground=4d4738
+selection-background=eccb93
 
-search-box-no-match=#473c15 #dacfa4
-search-box-match=#351908 #dd986f
+search-box-no-match=473c15 dacfa4
+search-box-match=351908 dd986f
 
-urls=#264c5c
-jump-labels=#351908 #dd986f
+urls=264c5c
+jump-labels=351908 dd986f
 
-regular0=#474747
-regular1=#a81010
-regular2=#2a5d42
-regular3=#5b551e
-regular4=#125596
-regular5=#6f21ca
-regular6=#2f5b56
-regular7=#4a4740
+regular0=474747
+regular1=a81010
+regular2=2a5d42
+regular3=5b551e
+regular4=125596
+regular5=6f21ca
+regular6=2f5b56
+regular7=4a4740
 
-bright0=#4f463d
-bright1=#a81010
-bright2=#2f5e22
-bright3=#7c4712
-bright4=#205a71
-bright5=#6e21cb
-bright6=#2e5b54
-bright7=#693d0b
-16=#673e19
-17=#a81218
+bright0=4f463d
+bright1=a81010
+bright2=2f5e22
+bright3=7c4712
+bright4=205a71
+bright5=6e21cb
+bright6=2e5b54
+bright7=693d0b
+16=673e19
+17=a81218
