--- a/extras/foot/themes/dark/oasis_abyss_dark.ini
+++ b/extras/foot/themes/dark/oasis_abyss_dark.ini
@@ -1,37 +1,37 @@
-; extras/foot/oasis_abyss_dark.ini
-; name: Oasis Abyss Dark
-; author: uhs-robert
+# extras/foot/oasis_abyss_dark.ini
+# name: Oasis Abyss Dark
+# author: uhs-robert
 
 [colors]
-cursor=#000000 #F0E68C
-foreground=#F0EBE6
-background=#000000
+cursor=000000 F0E68C
+foreground=F0EBE6
+background=000000
 
-selection-foreground=#F0EBE6
-selection-background=#532E2E
+selection-foreground=F0EBE6
+selection-background=532E2E
 
-search-box-no-match=#F0EBE6 #4D4A42
-search-box-match=#000000 #F0E68C
+search-box-no-match=F0EBE6 4D4A42
+search-box-match=000000 F0E68C
 
-urls=#87CEEB
-jump-labels=#000000 #F0E68C
+urls=87CEEB
+jump-labels=000000 F0E68C
 
-regular0=#000000
-regular1=#FF7979
-regular2=#53D390
-regular3=#F0E68C
-regular4=#81C0FF
-regular5=#C695FF
-regular6=#68C0B6
-regular7=#DDDBD5
+regular0=000000
+regular1=FF7979
+regular2=53D390
+regular3=F0E68C
+regular4=81C0FF
+regular5=C695FF
+regular6=68C0B6
+regular7=DDDBD5
 
-bright0=#605C4D
-bright1=#FFA0A0
-bright2=#96EA7F
-bright3=#F8B471
-bright4=#87CEEB
-bright5=#D2ADFF
-bright6=#8FD1C7
-bright7=#FFF9F2
-16=#FF9633
-17=#D6CE7C
+bright0=605C4D
+bright1=FFA0A0
+bright2=96EA7F
+bright3=F8B471
+bright4=87CEEB
+bright5=D2ADFF
+bright6=8FD1C7
+bright7=FFF9F2
+16=FF9633
+17=D6CE7C
