--- a/extras/foot/themes/dark/oasis_cactus_dark.ini
+++ b/extras/foot/themes/dark/oasis_cactus_dark.ini
@@ -1,37 +1,37 @@
-; extras/foot/oasis_cactus_dark.ini
-; name: Oasis Cactus Dark
-; author: uhs-robert
+# extras/foot/oasis_cactus_dark.ini
+# name: Oasis Cactus Dark
+# author: uhs-robert
 
 [colors]
-cursor=#1C261E #F0E68C
-foreground=#DDF0E5
-background=#1C261E
+cursor=1C261E F0E68C
+foreground=DDF0E5
+background=1C261E
 
-selection-foreground=#DDF0E5
-selection-background=#3C4B3E
+selection-foreground=DDF0E5
+selection-background=3C4B3E
 
-search-box-no-match=#DDF0E5 #532E2E
-search-box-match=#1C261E #FFA0A0
+search-box-no-match=DDF0E5 532E2E
+search-box-match=1C261E FFA0A0
 
-urls=#87CEEB
-jump-labels=#1C261E #FFA0A0
+urls=87CEEB
+jump-labels=1C261E FFA0A0
 
-regular0=#1C261E
-regular1=#FF7979
-regular2=#53D390
-regular3=#F0E68C
-regular4=#81C0FF
-regular5=#C695FF
-regular6=#68C0B6
-regular7=#DDDBD5
+regular0=1C261E
+regular1=FF7979
+regular2=53D390
+regular3=F0E68C
+regular4=81C0FF
+regular5=C695FF
+regular6=68C0B6
+regular7=DDDBD5
 
-bright0=#5B7360
-bright1=#FFA0A0
-bright2=#96EA7F
-bright3=#F8B471
-bright4=#87CEEB
-bright5=#D2ADFF
-bright6=#8FD1C7
-bright7=#FFF9F2
-16=#FF9633
-17=#F39493
+bright0=5B7360
+bright1=FFA0A0
+bright2=96EA7F
+bright3=F8B471
+bright4=87CEEB
+bright5=D2ADFF
+bright6=8FD1C7
+bright7=FFF9F2
+16=FF9633
+17=F39493
