--- a/extras/foot/themes/dark/oasis_canyon_dark.ini
+++ b/extras/foot/themes/dark/oasis_canyon_dark.ini
@@ -1,37 +1,37 @@
-; extras/foot/oasis_canyon_dark.ini
-; name: Oasis Canyon Dark
-; author: uhs-robert
+# extras/foot/oasis_canyon_dark.ini
+# name: Oasis Canyon Dark
+# author: uhs-robert
 
 [colors]
-cursor=#2F1A05 #F0E68C
-foreground=#F8E7D3
-background=#2F1A05
+cursor=2F1A05 F0E68C
+foreground=F8E7D3
+background=2F1A05
 
-selection-foreground=#F8E7D3
-selection-background=#624020
+selection-foreground=F8E7D3
+selection-background=624020
 
-search-box-no-match=#F8E7D3 #1A3D5C
-search-box-match=#2F1A05 #58B8FD
+search-box-no-match=F8E7D3 1A3D5C
+search-box-match=2F1A05 58B8FD
 
-urls=#92D3ED
-jump-labels=#2F1A05 #58B8FD
+urls=92D3ED
+jump-labels=2F1A05 58B8FD
 
-regular0=#2F1A05
-regular1=#FF7979
-regular2=#53D390
-regular3=#F0E68C
-regular4=#81C0FF
-regular5=#C695FF
-regular6=#68C0B6
-regular7=#DDDBD5
+regular0=2F1A05
+regular1=FF7979
+regular2=53D390
+regular3=F0E68C
+regular4=81C0FF
+regular5=C695FF
+regular6=68C0B6
+regular7=DDDBD5
 
-bright0=#8B6043
-bright1=#FFA0A0
-bright2=#96EA7F
-bright3=#F8B471
-bright4=#87CEEB
-bright5=#D2ADFF
-bright6=#8FD1C7
-bright7=#FFF9F2
-16=#FF9633
-17=#F58B8B
+bright0=8B6043
+bright1=FFA0A0
+bright2=96EA7F
+bright3=F8B471
+bright4=87CEEB
+bright5=D2ADFF
+bright6=8FD1C7
+bright7=FFF9F2
+16=FF9633
+17=F58B8B
