--- a/extras/foot/themes/dark/oasis_rose_dark.ini
+++ b/extras/foot/themes/dark/oasis_rose_dark.ini
@@ -1,37 +1,37 @@
-; extras/foot/oasis_rose_dark.ini
-; name: Oasis Rose Dark
-; author: uhs-robert
+# extras/foot/oasis_rose_dark.ini
+# name: Oasis Rose Dark
+# author: uhs-robert
 
 [colors]
-cursor=#301828 #F0E68C
-foreground=#EDD5E7
-background=#301828
+cursor=301828 F0E68C
+foreground=EDD5E7
+background=301828
 
-selection-foreground=#EDD5E7
-selection-background=#523A4B
+selection-foreground=EDD5E7
+selection-background=523A4B
 
-search-box-no-match=#EDD5E7 #345A2B
-search-box-match=#301828 #96EA7F
+search-box-no-match=EDD5E7 345A2B
+search-box-match=301828 96EA7F
 
-urls=#87CEEB
-jump-labels=#301828 #96EA7F
+urls=87CEEB
+jump-labels=301828 96EA7F
 
-regular0=#301828
-regular1=#FF7979
-regular2=#53D390
-regular3=#F0E68C
-regular4=#81C0FF
-regular5=#C695FF
-regular6=#68C0B6
-regular7=#DDDBD5
+regular0=301828
+regular1=FF7979
+regular2=53D390
+regular3=F0E68C
+regular4=81C0FF
+regular5=C695FF
+regular6=68C0B6
+regular7=DDDBD5
 
-bright0=#816175
-bright1=#FFA0A0
-bright2=#96EA7F
-bright3=#F8B471
-bright4=#87CEEB
-bright5=#D2ADFF
-bright6=#8FD1C7
-bright7=#FFF9F2
-16=#FF9633
-17=#D6CE7C
+bright0=816175
+bright1=FFA0A0
+bright2=96EA7F
+bright3=F8B471
+bright4=87CEEB
+bright5=D2ADFF
+bright6=8FD1C7
+bright7=FFF9F2
+16=FF9633
+17=D6CE7C
