--- a/extras/foot/themes/dark/oasis_twilight_dark.ini
+++ b/extras/foot/themes/dark/oasis_twilight_dark.ini
@@ -1,37 +1,37 @@
-; extras/foot/oasis_twilight_dark.ini
-; name: Oasis Twilight Dark
-; author: uhs-robert
+# extras/foot/oasis_twilight_dark.ini
+# name: Oasis Twilight Dark
+# author: uhs-robert
 
 [colors]
-cursor=#221B2F #F0E68C
-foreground=#E6E0F8
-background=#221B2F
+cursor=221B2F F0E68C
+foreground=E6E0F8
+background=221B2F
 
-selection-foreground=#E6E0F8
-selection-background=#352D47
+selection-foreground=E6E0F8
+selection-background=352D47
 
-search-box-no-match=#E6E0F8 #4D4528
-search-box-match=#221B2F #F2E898
+search-box-no-match=E6E0F8 4D4528
+search-box-match=221B2F F2E898
 
-urls=#87CEEB
-jump-labels=#221B2F #F2E898
+urls=87CEEB
+jump-labels=221B2F F2E898
 
-regular0=#221B2F
-regular1=#FF7979
-regular2=#53D390
-regular3=#F0E68C
-regular4=#81C0FF
-regular5=#C695FF
-regular6=#68C0B6
-regular7=#DDDBD5
+regular0=221B2F
+regular1=FF7979
+regular2=53D390
+regular3=F0E68C
+regular4=81C0FF
+regular5=C695FF
+regular6=68C0B6
+regular7=DDDBD5
 
-bright0=#71609A
-bright1=#FFA0A0
-bright2=#96EA7F
-bright3=#F8B471
-bright4=#87CEEB
-bright5=#D2ADFF
-bright6=#8FD1C7
-bright7=#FFF9F2
-16=#FF9633
-17=#F58B8B
+bright0=71609A
+bright1=FFA0A0
+bright2=96EA7F
+bright3=F8B471
+bright4=87CEEB
+bright5=D2ADFF
+bright6=8FD1C7
+bright7=FFF9F2
+16=FF9633
+17=F58B8B
