--- a/extras/foot/themes/light/1/oasis_cactus_light_1.ini
+++ b/extras/foot/themes/light/1/oasis_cactus_light_1.ini
@@ -1,37 +1,37 @@
-; extras/foot/oasis_cactus_light_1.ini
-; name: Oasis Cactus Light 1
-; author: uhs-robert
+# extras/foot/oasis_cactus_light_1.ini
+# name: Oasis Cactus Light 1
+# author: uhs-robert
 
 [colors]
-cursor=#f9fbfa #406d42
-foreground=#465b4f
-background=#f9fbfa
+cursor=f9fbfa 406d42
+foreground=465b4f
+background=f9fbfa
 
-selection-foreground=#465b4f
-selection-background=#dde9e3
+selection-foreground=465b4f
+selection-background=dde9e3
 
-search-box-no-match=#15472f #a4dac0
-search-box-match=#350808 #dd6f6f
+search-box-no-match=15472f a4dac0
+search-box-match=350808 dd6f6f
 
-urls=#2e5c6f
-jump-labels=#350808 #dd6f6f
+urls=2e5c6f
+jump-labels=350808 dd6f6f
 
-regular0=#575757
-regular1=#c51414
-regular2=#306e4e
-regular3=#6b6424
-regular4=#1664b2
-regular5=#8233de
-regular6=#376b66
-regular7=#59564e
+regular0=575757
+regular1=c51414
+regular2=306e4e
+regular3=6b6424
+regular4=1664b2
+regular5=8233de
+regular6=376b66
+regular7=59564e
 
-bright0=#61544b
-bright1=#c51414
-bright2=#376f28
-bright3=#925416
-bright4=#266a86
-bright5=#8134de
-bright6=#366c63
-bright7=#7f4a0d
-16=#7c4b1d
-17=#bb292d
+bright0=61544b
+bright1=c51414
+bright2=376f28
+bright3=925416
+bright4=266a86
+bright5=8134de
+bright6=366c63
+bright7=7f4a0d
+16=7c4b1d
+17=bb292d
