--- a/extras/foot/themes/light/1/oasis_canyon_light_1.ini
+++ b/extras/foot/themes/light/1/oasis_canyon_light_1.ini
@@ -1,37 +1,37 @@
-; extras/foot/oasis_canyon_light_1.ini
-; name: Oasis Canyon Light 1
-; author: uhs-robert
+# extras/foot/oasis_canyon_light_1.ini
+# name: Oasis Canyon Light 1
+# author: uhs-robert
 
 [colors]
-cursor=#f9f7f5 #954f10
-foreground=#665137
-background=#f9f7f5
+cursor=f9f7f5 954f10
+foreground=665137
+background=f9f7f5
 
-selection-foreground=#665137
-selection-background=#e8e0d8
+selection-foreground=665137
+selection-background=e8e0d8
 
-search-box-no-match=#4e260e #e1b69d
-search-box-match=#092234 #72aeda
+search-box-no-match=4e260e e1b69d
+search-box-match=092234 72aeda
 
-urls=#2c5a6d
-jump-labels=#092234 #72aeda
+urls=2c5a6d
+jump-labels=092234 72aeda
 
-regular0=#555555
-regular1=#c21313
-regular2=#306c4c
-regular3=#696223
-regular4=#1662af
-regular5=#8030de
-regular6=#366a64
-regular7=#58554c
+regular0=555555
+regular1=c21313
+regular2=306c4c
+regular3=696223
+regular4=1662af
+regular5=8030de
+regular6=366a64
+regular7=58554c
 
-bright0=#5f5349
-bright1=#c21313
-bright2=#366d27
-bright3=#8f5215
-bright4=#266884
-bright5=#7f31de
-bright6=#356a62
-bright7=#7d490c
-16=#79491c
-17=#ba252a
+bright0=5f5349
+bright1=c21313
+bright2=366d27
+bright3=8f5215
+bright4=266884
+bright5=7f31de
+bright6=356a62
+bright7=7d490c
+16=79491c
+17=ba252a
