--- a/extras/foot/themes/light/1/oasis_lagoon_light_1.ini
+++ b/extras/foot/themes/light/1/oasis_lagoon_light_1.ini
@@ -1,37 +1,37 @@
-; extras/foot/oasis_lagoon_light_1.ini
-; name: Oasis Lagoon Light 1
-; author: uhs-robert
+# extras/foot/oasis_lagoon_light_1.ini
+# name: Oasis Lagoon Light 1
+# author: uhs-robert
 
 [colors]
-cursor=#f9fafb #1665aa
-foreground=#40577a
-background=#f9fafb
+cursor=f9fafb 1665aa
+foreground=40577a
+background=f9fafb
 
-selection-foreground=#40577a
-selection-background=#dde3e9
+selection-foreground=40577a
+selection-background=dde3e9
 
-search-box-no-match=#0f384c #9fcae0
-search-box-match=#351908 #dd986f
+search-box-no-match=0f384c 9fcae0
+search-box-match=351908 dd986f
 
-urls=#2e5c6e
-jump-labels=#351908 #dd986f
+urls=2e5c6e
+jump-labels=351908 dd986f
 
-regular0=#565656
-regular1=#c51414
-regular2=#306e4e
-regular3=#6a6423
-regular4=#1663b1
-regular5=#8133de
-regular6=#376b65
-regular7=#59564e
+regular0=565656
+regular1=c51414
+regular2=306e4e
+regular3=6a6423
+regular4=1663b1
+regular5=8133de
+regular6=376b65
+regular7=59564e
 
-bright0=#60544a
-bright1=#c41414
-bright2=#376f28
-bright3=#915315
-bright4=#266a86
-bright5=#8033de
-bright6=#366c63
-bright7=#7e4a0d
-16=#7c4b1d
-17=#bf2227
+bright0=60544a
+bright1=c41414
+bright2=376f28
+bright3=915315
+bright4=266a86
+bright5=8033de
+bright6=366c63
+bright7=7e4a0d
+16=7c4b1d
+17=bf2227
