--- a/extras/foot/themes/light/1/oasis_night_light_1.ini
+++ b/extras/foot/themes/light/1/oasis_night_light_1.ini
@@ -1,37 +1,37 @@
-; extras/foot/oasis_night_light_1.ini
-; name: Oasis Night Light 1
-; author: uhs-robert
+# extras/foot/oasis_night_light_1.ini
+# name: Oasis Night Light 1
+# author: uhs-robert
 
 [colors]
-cursor=#e0dbcc #7b410d
-foreground=#52422d
-background=#e0dbcc
+cursor=e0dbcc 7b410d
+foreground=52422d
+background=e0dbcc
 
-selection-foreground=#52422d
-selection-background=#cfc7af
+selection-foreground=52422d
+selection-background=cfc7af
 
-search-box-no-match=#4e260e #e1b69d
-search-box-match=#350808 #dd6f6f
+search-box-no-match=4e260e e1b69d
+search-box-match=350808 dd6f6f
 
-urls=#244958
-jump-labels=#350808 #dd6f6f
+urls=244958
+jump-labels=350808 dd6f6f
 
-regular0=#623b14
-regular1=#a21010
-regular2=#275a3f
-regular3=#57511d
-regular4=#125191
-regular5=#6b1fc4
-regular6=#2d5753
-regular7=#47443e
+regular0=623b14
+regular1=a21010
+regular2=275a3f
+regular3=57511d
+regular4=125191
+regular5=6b1fc4
+regular6=2d5753
+regular7=47443e
 
-bright0=#574030
-bright1=#a21010
-bright2=#2d5b20
-bright3=#764412
-bright4=#1f566d
-bright5=#6a20c4
-bright6=#2c5851
-bright7=#653b0a
-16=#623b17
-17=#9b1f23
+bright0=574030
+bright1=a21010
+bright2=2d5b20
+bright3=764412
+bright4=1f566d
+bright5=6a20c4
+bright6=2c5851
+bright7=653b0a
+16=623b17
+17=9b1f23
