--- a/extras/foot/themes/light/1/oasis_rose_light_1.ini
+++ b/extras/foot/themes/light/1/oasis_rose_light_1.ini
@@ -1,37 +1,37 @@
-; extras/foot/oasis_rose_light_1.ini
-; name: Oasis Rose Light 1
-; author: uhs-robert
+# extras/foot/oasis_rose_light_1.ini
+# name: Oasis Rose Light 1
+# author: uhs-robert
 
 [colors]
-cursor=#fbf9fb #c3151c
-foreground=#694e63
-background=#fbf9fb
+cursor=fbf9fb c3151c
+foreground=694e63
+background=fbf9fb
 
-selection-foreground=#694e63
-selection-background=#e9dde9
+selection-foreground=694e63
+selection-background=e9dde9
 
-search-box-no-match=#481335 #dba3c6
-search-box-match=#09342f #72dacc
+search-box-no-match=481335 dba3c6
+search-box-match=09342f 72dacc
 
-urls=#2e5c6e
-jump-labels=#09342f #72dacc
+urls=2e5c6e
+jump-labels=09342f 72dacc
 
-regular0=#565656
-regular1=#c41414
-regular2=#306e4d
-regular3=#6a6423
-regular4=#1663b1
-regular5=#8132de
-regular6=#376b65
-regular7=#59564d
+regular0=565656
+regular1=c41414
+regular2=306e4d
+regular3=6a6423
+regular4=1663b1
+regular5=8132de
+regular6=376b65
+regular7=59564d
 
-bright0=#60544a
-bright1=#c41414
-bright2=#376f28
-bright3=#915315
-bright4=#266985
-bright5=#8033de
-bright6=#366b63
-bright7=#7e4a0d
-16=#7c4b1d
-17=#6b632c
+bright0=60544a
+bright1=c41414
+bright2=376f28
+bright3=915315
+bright4=266985
+bright5=8033de
+bright6=366b63
+bright7=7e4a0d
+16=7c4b1d
+17=6b632c
