--- a/extras/foot/themes/light/1/oasis_twilight_light_1.ini
+++ b/extras/foot/themes/light/1/oasis_twilight_light_1.ini
@@ -1,37 +1,37 @@
-; extras/foot/oasis_twilight_light_1.ini
-; name: Oasis Twilight Light 1
-; author: uhs-robert
+# extras/foot/oasis_twilight_light_1.ini
+# name: Oasis Twilight Light 1
+# author: uhs-robert
 
 [colors]
-cursor=#f9f9fb #8724e7
-foreground=#5b4f7e
-background=#f9f9fb
+cursor=f9f9fb 8724e7
+foreground=5b4f7e
+background=f9f9fb
 
-selection-foreground=#5b4f7e
-selection-background=#dddde9
+selection-foreground=5b4f7e
+selection-background=dddde9
 
-search-box-no-match=#31124a #c3a1dd
-search-box-match=#31290d #d1be7a
+search-box-no-match=31124a c3a1dd
+search-box-match=31290d d1be7a
 
-urls=#2e5b6e
-jump-labels=#31290d #d1be7a
+urls=2e5b6e
+jump-labels=31290d d1be7a
 
-regular0=#565656
-regular1=#c41414
-regular2=#306d4d
-regular3=#6a6323
-regular4=#1663b1
-regular5=#8132de
-regular6=#376b65
-regular7=#59564d
+regular0=565656
+regular1=c41414
+regular2=306d4d
+regular3=6a6323
+regular4=1663b1
+regular5=8132de
+regular6=376b65
+regular7=59564d
 
-bright0=#60544a
-bright1=#c41414
-bright2=#376e28
-bright3=#905315
-bright4=#266985
-bright5=#8033de
-bright6=#366b63
-bright7=#7e490d
-16=#7b4a1d
-17=#bc252a
+bright0=60544a
+bright1=c41414
+bright2=376e28
+bright3=905315
+bright4=266985
+bright5=8033de
+bright6=366b63
+bright7=7e490d
+16=7b4a1d
+17=bc252a
