--- a/extras/foot/themes/light/2/oasis_cactus_light_2.ini
+++ b/extras/foot/themes/light/2/oasis_cactus_light_2.ini
@@ -1,37 +1,37 @@
-; extras/foot/oasis_cactus_light_2.ini
-; name: Oasis Cactus Light 2
-; author: uhs-robert
+# extras/foot/oasis_cactus_light_2.ini
+# name: Oasis Cactus Light 2
+# author: uhs-robert
 
 [colors]
-cursor=#eef7f2 #3e6940
-foreground=#44584c
-background=#eef7f2
+cursor=eef7f2 3e6940
+foreground=44584c
+background=eef7f2
 
-selection-foreground=#44584c
-selection-background=#cfe8da
+selection-foreground=44584c
+selection-background=cfe8da
 
-search-box-no-match=#15472f #a4dac0
-search-box-match=#350808 #dd6f6f
+search-box-no-match=15472f a4dac0
+search-box-match=350808 dd6f6f
 
-urls=#2c596b
-jump-labels=#350808 #dd6f6f
+urls=2c596b
+jump-labels=350808 dd6f6f
 
-regular0=#535353
-regular1=#bf1313
-regular2=#306b4b
-regular3=#686123
-regular4=#1560ad
-regular5=#7e2ddc
-regular6=#356862
-regular7=#56534b
+regular0=535353
+regular1=bf1313
+regular2=306b4b
+regular3=686123
+regular4=1560ad
+regular5=7e2ddc
+regular6=356862
+regular7=56534b
 
-bright0=#5e5149
-bright1=#bf1313
-bright2=#366b27
-bright3=#8d5115
-bright4=#256681
-bright5=#7d2fdd
-bright6=#356861
-bright7=#7a470c
-16=#77481c
-17=#b5282c
+bright0=5e5149
+bright1=bf1313
+bright2=366b27
+bright3=8d5115
+bright4=256681
+bright5=7d2fdd
+bright6=356861
+bright7=7a470c
+16=77481c
+17=b5282c
