--- a/extras/foot/themes/light/2/oasis_canyon_light_2.ini
+++ b/extras/foot/themes/light/2/oasis_canyon_light_2.ini
@@ -1,37 +1,37 @@
-; extras/foot/oasis_canyon_light_2.ini
-; name: Oasis Canyon Light 2
-; author: uhs-robert
+# extras/foot/oasis_canyon_light_2.ini
+# name: Oasis Canyon Light 2
+# author: uhs-robert
 
 [colors]
-cursor=#f8f0e7 #8f4c10
-foreground=#624e35
-background=#f8f0e7
+cursor=f8f0e7 8f4c10
+foreground=624e35
+background=f8f0e7
 
-selection-foreground=#624e35
-selection-background=#eedac3
+selection-foreground=624e35
+selection-background=eedac3
 
-search-box-no-match=#4e260e #e1b69d
-search-box-match=#092234 #72aeda
+search-box-no-match=4e260e e1b69d
+search-box-match=092234 72aeda
 
-urls=#2a5768
-jump-labels=#092234 #72aeda
+urls=2a5768
+jump-labels=092234 72aeda
 
-regular0=#515151
-regular1=#bb1313
-regular2=#2f6849
-regular3=#655f22
-regular4=#155ea9
-regular5=#7c2adc
-regular6=#346660
-regular7=#545149
+regular0=515151
+regular1=bb1313
+regular2=2f6849
+regular3=655f22
+regular4=155ea9
+regular5=7c2adc
+regular6=346660
+regular7=545149
 
-bright0=#5b4f47
-bright1=#bb1313
-bright2=#356926
-bright3=#8a4f14
-bright4=#24647e
-bright5=#7a2bdc
-bright6=#34665f
-bright7=#77450c
-16=#74471b
-17=#b42329
+bright0=5b4f47
+bright1=bb1313
+bright2=356926
+bright3=8a4f14
+bright4=24647e
+bright5=7a2bdc
+bright6=34665f
+bright7=77450c
+16=74471b
+17=b42329
