--- a/extras/foot/themes/light/2/oasis_dune_light_2.ini
+++ b/extras/foot/themes/light/2/oasis_dune_light_2.ini
@@ -1,37 +1,37 @@
-; extras/foot/oasis_dune_light_2.ini
-; name: Oasis Dune Light 2
-; author: uhs-robert
+# extras/foot/oasis_dune_light_2.ini
+# name: Oasis Dune Light 2
+# author: uhs-robert
 
 [colors]
-cursor=#f9f6ec #6b611a
-foreground=#57544b
-background=#f9f6ec
+cursor=f9f6ec 6b611a
+foreground=57544b
+background=f9f6ec
 
-selection-foreground=#57544b
-selection-background=#eee5c9
+selection-foreground=57544b
+selection-background=eee5c9
 
-search-box-no-match=#473c15 #dacfa4
-search-box-match=#210b32 #ab76d6
+search-box-no-match=473c15 dacfa4
+search-box-match=210b32 ab76d6
 
-urls=#2d5a6c
-jump-labels=#210b32 #ab76d6
+urls=2d5a6c
+jump-labels=210b32 ab76d6
 
-regular0=#545454
-regular1=#c01313
-regular2=#306b4c
-regular3=#686123
-regular4=#1561ad
-regular5=#7f2fdd
-regular6=#366963
-regular7=#57544b
+regular0=545454
+regular1=c01313
+regular2=306b4c
+regular3=686123
+regular4=1561ad
+regular5=7f2fdd
+regular6=366963
+regular7=57544b
 
-bright0=#5e5249
-bright1=#c01313
-bright2=#366c27
-bright3=#8e5115
-bright4=#256782
-bright5=#7e30dd
-bright6=#356961
-bright7=#7b480c
-16=#78491c
-17=#b42c2f
+bright0=5e5249
+bright1=c01313
+bright2=366c27
+bright3=8e5115
+bright4=256782
+bright5=7e30dd
+bright6=356961
+bright7=7b480c
+16=78491c
+17=b42c2f
