--- a/extras/foot/themes/light/2/oasis_lagoon_light_2.ini
+++ b/extras/foot/themes/light/2/oasis_lagoon_light_2.ini
@@ -1,37 +1,37 @@
-; extras/foot/oasis_lagoon_light_2.ini
-; name: Oasis Lagoon Light 2
-; author: uhs-robert
+# extras/foot/oasis_lagoon_light_2.ini
+# name: Oasis Lagoon Light 2
+# author: uhs-robert
 
 [colors]
-cursor=#ebf1f9 #135fa2
-foreground=#3d5273
-background=#ebf1f9
+cursor=ebf1f9 135fa2
+foreground=3d5273
+background=ebf1f9
 
-selection-foreground=#3d5273
-selection-background=#c8d8ee
+selection-foreground=3d5273
+selection-background=c8d8ee
 
-search-box-no-match=#0f384c #9fcae0
-search-box-match=#351908 #dd986f
+search-box-no-match=0f384c 9fcae0
+search-box-match=351908 dd986f
 
-urls=#2b5668
-jump-labels=#351908 #dd986f
+urls=2b5668
+jump-labels=351908 dd986f
 
-regular0=#515151
-regular1=#ba1313
-regular2=#2f6849
-regular3=#655e22
-regular4=#155ea8
-regular5=#7b29dc
-regular6=#34655f
-regular7=#535148
+regular0=515151
+regular1=ba1313
+regular2=2f6849
+regular3=655e22
+regular4=155ea8
+regular5=7b29dc
+regular6=34655f
+regular7=535148
 
-bright0=#5b4f47
-bright1=#ba1313
-bright2=#346926
-bright3=#894f14
-bright4=#24647e
-bright5=#7a2adc
-bright6=#34655e
-bright7=#77450c
-16=#74461b
-17=#b51f25
+bright0=5b4f47
+bright1=ba1313
+bright2=346926
+bright3=894f14
+bright4=24647e
+bright5=7a2adc
+bright6=34655e
+bright7=77450c
+16=74461b
+17=b51f25
