--- a/extras/foot/themes/light/3/oasis_midnight_light_3.ini
+++ b/extras/foot/themes/light/3/oasis_midnight_light_3.ini
@@ -1,37 +1,37 @@
-; extras/foot/oasis_midnight_light_3.ini
-; name: Oasis Midnight Light 3
-; author: uhs-robert
+# extras/foot/oasis_midnight_light_3.ini
+# name: Oasis Midnight Light 3
+# author: uhs-robert
 
 [colors]
-cursor=#f7e2d4 #a82025
-foreground=#524943
-background=#f7e2d4
+cursor=f7e2d4 a82025
+foreground=524943
+background=f7e2d4
 
-selection-foreground=#524943
-selection-background=#f0c8ad
+selection-foreground=524943
+selection-background=f0c8ad
 
-search-box-no-match=#4e0e0e #e19d9d
-search-box-match=#0d311d #7ad1a1
+search-box-no-match=4e0e0e e19d9d
+search-box-match=0d311d 7ad1a1
 
-urls=#285060
-jump-labels=#0d311d #7ad1a1
+urls=285060
+jump-labels=0d311d 7ad1a1
 
-regular0=#4b4b4b
-regular1=#ae1212
-regular2=#2b6144
-regular3=#5e581f
-regular4=#13589c
-regular5=#7322d2
-regular6=#305e59
-regular7=#4e4b43
+regular0=4b4b4b
+regular1=ae1212
+regular2=2b6144
+regular3=5e581f
+regular4=13589c
+regular5=7322d2
+regular6=305e59
+regular7=4e4b43
 
-bright0=#534941
-bright1=#ae1212
-bright2=#316223
-bright3=#804913
-bright4=#215d75
-bright5=#7223d3
-bright6=#305f58
-bright7=#6e400b
-16=#6b411a
-17=#5e5727
+bright0=534941
+bright1=ae1212
+bright2=316223
+bright3=804913
+bright4=215d75
+bright5=7223d3
+bright6=305f58
+bright7=6e400b
+16=6b411a
+17=5e5727
