--- a/extras/foot/themes/light/3/oasis_mirage_light_3.ini
+++ b/extras/foot/themes/light/3/oasis_mirage_light_3.ini
@@ -1,37 +1,37 @@
-; extras/foot/oasis_mirage_light_3.ini
-; name: Oasis Mirage Light 3
-; author: uhs-robert
+# extras/foot/oasis_mirage_light_3.ini
+# name: Oasis Mirage Light 3
+# author: uhs-robert
 
 [colors]
-cursor=#dbf5f5 #32655d
-foreground=#405454
-background=#dbf5f5
+cursor=dbf5f5 32655d
+foreground=405454
+background=dbf5f5
 
-selection-foreground=#405454
-selection-background=#b7ebeb
+selection-foreground=405454
+selection-background=b7ebeb
 
-search-box-no-match=#0f4c44 #9fe0d7
-search-box-match=#351908 #dd986f
+search-box-no-match=0f4c44 9fe0d7
+search-box-match=351908 dd986f
 
-urls=#2b5667
-jump-labels=#351908 #dd986f
+urls=2b5667
+jump-labels=351908 dd986f
 
-regular0=#505050
-regular1=#b91313
-regular2=#2e6749
-regular3=#655e21
-regular4=#145ea6
-regular5=#7b27dc
-regular6=#33655f
-regular7=#535048
+regular0=505050
+regular1=b91313
+regular2=2e6749
+regular3=655e21
+regular4=145ea6
+regular5=7b27dc
+regular6=33655f
+regular7=535048
 
-bright0=#5a4e46
-bright1=#b91313
-bright2=#346926
-bright3=#894e15
-bright4=#24647d
-bright5=#7929dc
-bright6=#33655e
-bright7=#76450c
-16=#73461c
-17=#b0262a
+bright0=5a4e46
+bright1=b91313
+bright2=346926
+bright3=894e15
+bright4=24647d
+bright5=7929dc
+bright6=33655e
+bright7=76450c
+16=73461c
+17=b0262a
