--- a/extras/foot/themes/light/3/oasis_rose_light_3.ini
+++ b/extras/foot/themes/light/3/oasis_rose_light_3.ini
@@ -1,37 +1,37 @@
-; extras/foot/oasis_rose_light_3.ini
-; name: Oasis Rose Light 3
-; author: uhs-robert
+# extras/foot/oasis_rose_light_3.ini
+# name: Oasis Rose Light 3
+# author: uhs-robert
 
 [colors]
-cursor=#f4ddee #ab1318
-foreground=#594353
-background=#f4ddee
+cursor=f4ddee ab1318
+foreground=594353
+background=f4ddee
 
-selection-foreground=#594353
-selection-background=#e9badd
+selection-foreground=594353
+selection-background=e9badd
 
-search-box-no-match=#481335 #dba3c6
-search-box-match=#09342f #72dacc
+search-box-no-match=481335 dba3c6
+search-box-match=09342f 72dacc
 
-urls=#274e5e
-jump-labels=#09342f #72dacc
+urls=274e5e
+jump-labels=09342f 72dacc
 
-regular0=#494949
-regular1=#ab1111
-regular2=#2b5f43
-regular3=#5d561f
-regular4=#135699
-regular5=#7222cf
-regular6=#2f5d58
-regular7=#4c4942
+regular0=494949
+regular1=ab1111
+regular2=2b5f43
+regular3=5d561f
+regular4=135699
+regular5=7222cf
+regular6=2f5d58
+regular7=4c4942
 
-bright0=#524840
-bright1=#ab1111
-bright2=#306023
-bright3=#7e4813
-bright4=#215c73
-bright5=#7022d0
-bright6=#2f5d57
-bright7=#6c3f0b
-16=#69401a
-17=#5d5626
+bright0=524840
+bright1=ab1111
+bright2=306023
+bright3=7e4813
+bright4=215c73
+bright5=7022d0
+bright6=2f5d57
+bright7=6c3f0b
+16=69401a
+17=5d5626
