--- a/extras/foot/themes/light/4/oasis_cactus_light_4.ini
+++ b/extras/foot/themes/light/4/oasis_cactus_light_4.ini
@@ -1,37 +1,37 @@
-; extras/foot/oasis_cactus_light_4.ini
-; name: Oasis Cactus Light 4
-; author: uhs-robert
+# extras/foot/oasis_cactus_light_4.ini
+# name: Oasis Cactus Light 4
+# author: uhs-robert
 
 [colors]
-cursor=#d6f0e1 #3a623c
-foreground=#405147
-background=#d6f0e1
+cursor=d6f0e1 3a623c
+foreground=405147
+background=d6f0e1
 
-selection-foreground=#405147
-selection-background=#b4e4c8
+selection-foreground=405147
+selection-background=b4e4c8
 
-search-box-no-match=#15472f #a4dac0
-search-box-match=#350808 #dd6f6f
+search-box-no-match=15472f a4dac0
+search-box-match=350808 dd6f6f
 
-urls=#295263
-jump-labels=#350808 #dd6f6f
+urls=295263
+jump-labels=350808 dd6f6f
 
-regular0=#4d4d4d
-regular1=#b31212
-regular2=#2c6446
-regular3=#615a20
-regular4=#135aa0
-regular5=#7623d7
-regular6=#32615c
-regular7=#504d45
+regular0=4d4d4d
+regular1=b31212
+regular2=2c6446
+regular3=615a20
+regular4=135aa0
+regular5=7623d7
+regular6=32615c
+regular7=504d45
 
-bright0=#564b43
-bright1=#b31111
-bright2=#326425
-bright3=#844b14
-bright4=#226078
-bright5=#7523d9
-bright6=#32615a
-bright7=#71420b
-16=#6e431b
-17=#aa2429
+bright0=564b43
+bright1=b31111
+bright2=326425
+bright3=844b14
+bright4=226078
+bright5=7523d9
+bright6=32615a
+bright7=71420b
+16=6e431b
+17=aa2429
