--- a/extras/foot/themes/light/4/oasis_desert_light_4.ini
+++ b/extras/foot/themes/light/4/oasis_desert_light_4.ini
@@ -1,37 +1,37 @@
-; extras/foot/oasis_desert_light_4.ini
-; name: Oasis Desert Light 4
-; author: uhs-robert
+# extras/foot/oasis_desert_light_4.ini
+# name: Oasis Desert Light 4
+# author: uhs-robert
 
 [colors]
-cursor=#f5dfc7 #5e5517
-foreground=#564634
-background=#f5dfc7
+cursor=f5dfc7 5e5517
+foreground=564634
+background=f5dfc7
 
-selection-foreground=#564634
-selection-background=#eec9a0
+selection-foreground=564634
+selection-background=eec9a0
 
-search-box-no-match=#473c15 #dacfa4
-search-box-match=#351908 #dd986f
+search-box-no-match=473c15 dacfa4
+search-box-match=351908 dd986f
 
-urls=#274e5e
-jump-labels=#351908 #dd986f
+urls=274e5e
+jump-labels=351908 dd986f
 
-regular0=#494949
-regular1=#aa1111
-regular2=#2a5f43
-regular3=#5c561f
-regular4=#135698
-regular5=#7122cd
-regular6=#305c57
-regular7=#4b4941
+regular0=494949
+regular1=aa1111
+regular2=2a5f43
+regular3=5c561f
+regular4=135698
+regular5=7122cd
+regular6=305c57
+regular7=4b4941
 
-bright0=#514740
-bright1=#aa1010
-bright2=#306023
-bright3=#7d4813
-bright4=#205b73
-bright5=#7021cf
-bright6=#2f5d56
-bright7=#6b3e0b
-16=#683f19
-17=#a32124
+bright0=514740
+bright1=aa1010
+bright2=306023
+bright3=7d4813
+bright4=205b73
+bright5=7021cf
+bright6=2f5d56
+bright7=6b3e0b
+16=683f19
+17=a32124
