--- a/extras/foot/themes/light/4/oasis_lagoon_light_4.ini
+++ b/extras/foot/themes/light/4/oasis_lagoon_light_4.ini
@@ -1,37 +1,37 @@
-; extras/foot/oasis_lagoon_light_4.ini
-; name: Oasis Lagoon Light 4
-; author: uhs-robert
+# extras/foot/oasis_lagoon_light_4.ini
+# name: Oasis Lagoon Light 4
+# author: uhs-robert
 
 [colors]
-cursor=#c9dcf7 #11528a
-foreground=#334561
-background=#c9dcf7
+cursor=c9dcf7 11528a
+foreground=334561
+background=c9dcf7
 
-selection-foreground=#334561
-selection-background=#a1c2f1
+selection-foreground=334561
+selection-background=a1c2f1
 
-search-box-no-match=#0f384c #9fcae0
-search-box-match=#351908 #dd986f
+search-box-no-match=0f384c 9fcae0
+search-box-match=351908 dd986f
 
-urls=#244857
-jump-labels=#351908 #dd986f
+urls=244857
+jump-labels=351908 dd986f
 
-regular0=#444444
-regular1=#a11010
-regular2=#28593f
-regular3=#57511d
-regular4=#11518f
-regular5=#6a20c1
-regular6=#2d5752
-regular7=#46443d
+regular0=444444
+regular1=a11010
+regular2=28593f
+regular3=57511d
+regular4=11518f
+regular5=6a20c1
+regular6=2d5752
+regular7=46443d
 
-bright0=#4c423b
-bright1=#a11010
-bright2=#2d5a21
-bright3=#764312
-bright4=#1f566c
-bright5=#691fc3
-bright6=#2c5751
-bright7=#643a0a
-16=#613b18
-17=#9c1b1f
+bright0=4c423b
+bright1=a11010
+bright2=2d5a21
+bright3=764312
+bright4=1f566c
+bright5=691fc3
+bright6=2c5751
+bright7=643a0a
+16=613b18
+17=9c1b1f
