--- a/extras/foot/themes/light/4/oasis_rose_light_4.ini
+++ b/extras/foot/themes/light/4/oasis_rose_light_4.ini
@@ -1,37 +1,37 @@
-; extras/foot/oasis_rose_light_4.ini
-; name: Oasis Rose Light 4
-; author: uhs-robert
+# extras/foot/oasis_rose_light_4.ini
+# name: Oasis Rose Light 4
+# author: uhs-robert
 
 [colors]
-cursor=#f3ceea #9f1116
-foreground=#513d4b
-background=#f3ceea
+cursor=f3ceea 9f1116
+foreground=513d4b
+background=f3ceea
 
-selection-foreground=#513d4b
-selection-background=#eaa9da
+selection-foreground=513d4b
+selection-background=eaa9da
 
-search-box-no-match=#481335 #dba3c6
-search-box-match=#09342f #72dacc
+search-box-no-match=481335 dba3c6
+search-box-match=09342f 72dacc
 
-urls=#244756
-jump-labels=#09342f #72dacc
+urls=244756
+jump-labels=09342f 72dacc
 
-regular0=#434343
-regular1=#9f1010
-regular2=#27583e
-regular3=#56501d
-regular4=#11508e
-regular5=#6920bf
-regular6=#2d5651
-regular7=#45433c
+regular0=434343
+regular1=9f1010
+regular2=27583e
+regular3=56501d
+regular4=11508e
+regular5=6920bf
+regular6=2d5651
+regular7=45433c
 
-bright0=#4b413a
-bright1=#9f0f0f
-bright2=#2d5921
-bright3=#754311
-bright4=#1e556a
-bright5=#681fc1
-bright6=#2c5650
-bright7=#62390a
-16=#603a17
-17=#554f24
+bright0=4b413a
+bright1=9f0f0f
+bright2=2d5921
+bright3=754311
+bright4=1e556a
+bright5=681fc1
+bright6=2c5650
+bright7=62390a
+16=603a17
+17=554f24
