--- a/extras/foot/themes/light/4/oasis_twilight_light_4.ini
+++ b/extras/foot/themes/light/4/oasis_twilight_light_4.ini
@@ -1,37 +1,37 @@
-; extras/foot/oasis_twilight_light_4.ini
-; name: Oasis Twilight Light 4
-; author: uhs-robert
+# extras/foot/oasis_twilight_light_4.ini
+# name: Oasis Twilight Light 4
+# author: uhs-robert
 
 [colors]
-cursor=#d7cef3 #6914ba
-foreground=#433a5c
-background=#d7cef3
+cursor=d7cef3 6914ba
+foreground=433a5c
+background=d7cef3
 
-selection-foreground=#433a5c
-selection-background=#b9a9ea
+selection-foreground=433a5c
+selection-background=b9a9ea
 
-search-box-no-match=#31124a #c3a1dd
-search-box-match=#31290d #d1be7a
+search-box-no-match=31124a c3a1dd
+search-box-match=31290d d1be7a
 
-urls=#224351
-jump-labels=#31290d #d1be7a
+urls=224351
+jump-labels=31290d d1be7a
 
-regular0=#3f3f3f
-regular1=#980f0f
-regular2=#25543b
-regular3=#524c1b
-regular4=#104c87
-regular5=#641eb7
-regular6=#2a524e
-regular7=#413f39
+regular0=3f3f3f
+regular1=980f0f
+regular2=25543b
+regular3=524c1b
+regular4=104c87
+regular5=641eb7
+regular6=2a524e
+regular7=413f39
 
-bright0=#473e37
-bright1=#990f0f
-bright2=#2b551f
-bright3=#6f4011
-bright4=#1d5166
-bright5=#641eb8
-bright6=#2a524c
-bright7=#5d3609
-16=#5b3716
-17=#921d21
+bright0=473e37
+bright1=990f0f
+bright2=2b551f
+bright3=6f4011
+bright4=1d5166
+bright5=641eb8
+bright6=2a524c
+bright7=5d3609
+16=5b3716
+17=921d21
