--- a/extras/foot/themes/light/5/oasis_cactus_light_5.ini
+++ b/extras/foot/themes/light/5/oasis_cactus_light_5.ini
@@ -1,37 +1,37 @@
-; extras/foot/oasis_cactus_light_5.ini
-; name: Oasis Cactus Light 5
-; author: uhs-robert
+# extras/foot/oasis_cactus_light_5.ini
+# name: Oasis Cactus Light 5
+# author: uhs-robert
 
 [colors]
-cursor=#cbebd7 #375e39
-foreground=#3c4d44
-background=#cbebd7
+cursor=cbebd7 375e39
+foreground=3c4d44
+background=cbebd7
 
-selection-foreground=#3c4d44
-selection-background=#aadebe
+selection-foreground=3c4d44
+selection-background=aadebe
 
-search-box-no-match=#15472f #a4dac0
-search-box-match=#350808 #dd6f6f
+search-box-no-match=15472f a4dac0
+search-box-match=350808 dd6f6f
 
-urls=#274e5e
-jump-labels=#350808 #dd6f6f
+urls=274e5e
+jump-labels=350808 dd6f6f
 
-regular0=#494949
-regular1=#ac1111
-regular2=#2a5f43
-regular3=#5c561f
-regular4=#135699
-regular5=#7222ce
-regular6=#305d57
-regular7=#4c4942
+regular0=494949
+regular1=ac1111
+regular2=2a5f43
+regular3=5c561f
+regular4=135699
+regular5=7222ce
+regular6=305d57
+regular7=4c4942
 
-bright0=#51483f
-bright1=#ac1111
-bright2=#306023
-bright3=#7e4813
-bright4=#215b73
-bright5=#7022cf
-bright6=#2f5d56
-bright7=#6b3f0b
-16=#694019
-17=#a22527
+bright0=51483f
+bright1=ac1111
+bright2=306023
+bright3=7e4813
+bright4=215b73
+bright5=7022cf
+bright6=2f5d56
+bright7=6b3f0b
+16=694019
+17=a22527
