--- a/extras/foot/themes/light/5/oasis_dune_light_5.ini
+++ b/extras/foot/themes/light/5/oasis_dune_light_5.ini
@@ -1,37 +1,37 @@
-; extras/foot/oasis_dune_light_5.ini
-; name: Oasis Dune Light 5
-; author: uhs-robert
+# extras/foot/oasis_dune_light_5.ini
+# name: Oasis Dune Light 5
+# author: uhs-robert
 
 [colors]
-cursor=#ece1c6 #5e5517
-foreground=#4a4940
-background=#ece1c6
+cursor=ece1c6 5e5517
+foreground=4a4940
+background=ece1c6
 
-selection-foreground=#4a4940
-selection-background=#e1cfa4
+selection-foreground=4a4940
+selection-background=e1cfa4
 
-search-box-no-match=#473c15 #dacfa4
-search-box-match=#210b32 #ab76d6
+search-box-no-match=473c15 dacfa4
+search-box-match=210b32 ab76d6
 
-urls=#274d5d
-jump-labels=#210b32 #ab76d6
+urls=274d5d
+jump-labels=210b32 ab76d6
 
-regular0=#484848
-regular1=#a91010
-regular2=#2a5e42
-regular3=#5b551e
-regular4=#125597
-regular5=#7021cc
-regular6=#2f5c57
-regular7=#4a4841
+regular0=484848
+regular1=a91010
+regular2=2a5e42
+regular3=5b551e
+regular4=125597
+regular5=7021cc
+regular6=2f5c57
+regular7=4a4841
 
-bright0=#50473e
-bright1=#aa1111
-bright2=#2f5f22
-bright3=#7d4712
-bright4=#215b72
-bright5=#6f22cd
-bright6=#2f5c55
-bright7=#6a3e0b
-16=#683f19
-17=#9f272b
+bright0=50473e
+bright1=aa1111
+bright2=2f5f22
+bright3=7d4712
+bright4=215b72
+bright5=6f22cd
+bright6=2f5c55
+bright7=6a3e0b
+16=683f19
+17=9f272b
