--- a/extras/foot/themes/light/5/oasis_rose_light_5.ini
+++ b/extras/foot/themes/light/5/oasis_rose_light_5.ini
@@ -1,37 +1,37 @@
-; extras/foot/oasis_rose_light_5.ini
-; name: Oasis Rose Light 5
-; author: uhs-robert
+# extras/foot/oasis_rose_light_5.ini
+# name: Oasis Rose Light 5
+# author: uhs-robert
 
 [colors]
-cursor=#f0c2e7 #941015
-foreground=#4a3845
-background=#f0c2e7
+cursor=f0c2e7 941015
+foreground=4a3845
+background=f0c2e7
 
-selection-foreground=#4a3845
-selection-background=#e79dd9
+selection-foreground=4a3845
+selection-background=e79dd9
 
-search-box-no-match=#481335 #dba3c6
-search-box-match=#09342f #72dacc
+search-box-no-match=481335 dba3c6
+search-box-match=09342f 72dacc
 
-urls=#21414f
-jump-labels=#09342f #72dacc
+urls=21414f
+jump-labels=09342f 72dacc
 
-regular0=#3d3d3d
-regular1=#950e0e
-regular2=#24523a
-regular3=#4f4a1a
-regular4=#104a84
-regular5=#621db2
-regular6=#29504b
-regular7=#3f3d37
+regular0=3d3d3d
+regular1=950e0e
+regular2=24523a
+regular3=4f4a1a
+regular4=104a84
+regular5=621db2
+regular6=29504b
+regular7=3f3d37
 
-bright0=#443c35
-bright1=#940e0e
-bright2=#29531e
-bright3=#6d3e10
-bright4=#1c4f63
-bright5=#611db3
-bright6=#29504a
-bright7=#5a3509
-16=#583515
-17=#504a21
+bright0=443c35
+bright1=940e0e
+bright2=29531e
+bright3=6d3e10
+bright4=1c4f63
+bright5=611db3
+bright6=29504a
+bright7=5a3509
+16=583515
+17=504a21
