--- a/extras/foot/themes/light/5/oasis_sol_light_5.ini
+++ b/extras/foot/themes/light/5/oasis_sol_light_5.ini
@@ -1,37 +1,37 @@
-; extras/foot/oasis_sol_light_5.ini
-; name: Oasis Sol Light 5
-; author: uhs-robert
+# extras/foot/oasis_sol_light_5.ini
+# name: Oasis Sol Light 5
+# author: uhs-robert
 
 [colors]
-cursor=#f3bfba #871f20
-foreground=#5b2e26
-background=#f3bfba
+cursor=f3bfba 871f20
+foreground=5b2e26
+background=f3bfba
 
-selection-foreground=#5b2e26
-selection-background=#ec9b93
+selection-foreground=5b2e26
+selection-background=ec9b93
 
-search-box-no-match=#4e0e0e #e19d9d
-search-box-match=#0d311f #7ad1a7
+search-box-no-match=4e0e0e e19d9d
+search-box-match=0d311f 7ad1a7
 
-urls=#1f3e4b
-jump-labels=#0d311f #7ad1a7
+urls=1f3e4b
+jump-labels=0d311f 7ad1a7
 
-regular0=#3a3a3a
-regular1=#8f0e0e
-regular2=#234f38
-regular3=#4c4719
-regular4=#0f477f
-regular5=#5e1cab
-regular6=#274d48
-regular7=#3c3a34
+regular0=3a3a3a
+regular1=8f0e0e
+regular2=234f38
+regular3=4c4719
+regular4=0f477f
+regular5=5e1cab
+regular6=274d48
+regular7=3c3a34
 
-bright0=#413932
-bright1=#8f0e0e
-bright2=#274f1d
-bright3=#683b0f
-bright4=#1b4b5f
-bright5=#5d1cac
-bright6=#274d47
-bright7=#563209
-16=#543314
-17=#4d4720
+bright0=413932
+bright1=8f0e0e
+bright2=274f1d
+bright3=683b0f
+bright4=1b4b5f
+bright5=5d1cac
+bright6=274d47
+bright7=563209
+16=543314
+17=4d4720
