--- a/extras/foot/themes/light/5/oasis_twilight_light_5.ini
+++ b/extras/foot/themes/light/5/oasis_twilight_light_5.ini
@@ -1,37 +1,37 @@
-; extras/foot/oasis_twilight_light_5.ini
-; name: Oasis Twilight Light 5
-; author: uhs-robert
+# extras/foot/oasis_twilight_light_5.ini
+# name: Oasis Twilight Light 5
+# author: uhs-robert
 
 [colors]
-cursor=#cac2f0 #6012a9
-foreground=#3b3351
-background=#cac2f0
+cursor=cac2f0 6012a9
+foreground=3b3351
+background=cac2f0
 
-selection-foreground=#3b3351
-selection-background=#aa9de7
+selection-foreground=3b3351
+selection-background=aa9de7
 
-search-box-no-match=#31124a #c3a1dd
-search-box-match=#31290d #d1be7a
+search-box-no-match=31124a c3a1dd
+search-box-match=31290d d1be7a
 
-urls=#1e3b48
-jump-labels=#31290d #d1be7a
+urls=1e3b48
+jump-labels=31290d d1be7a
 
-regular0=#383838
-regular1=#8b0d0d
-regular2=#224c36
-regular3=#4a4518
-regular4=#0f457b
-regular5=#5b1ba6
-regular6=#264a46
-regular7=#393832
+regular0=383838
+regular1=8b0d0d
+regular2=224c36
+regular3=4a4518
+regular4=0f457b
+regular5=5b1ba6
+regular6=264a46
+regular7=393832
 
-bright0=#3e3630
-bright1=#8a0d0d
-bright2=#264d1c
-bright3=#653a0f
-bright4=#1a495c
-bright5=#5a1ba6
-bright6=#264a45
-bright7=#523008
-16=#503013
-17=#851a1d
+bright0=3e3630
+bright1=8a0d0d
+bright2=264d1c
+bright3=653a0f
+bright4=1a495c
+bright5=5a1ba6
+bright6=264a45
+bright7=523008
+16=503013
+17=851a1d
